@@ -17,17 +17,18 @@ package com.sun.jna;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FilenameFilter;
-import java.io.InputStreamReader;
 import java.io.IOException;
-import java.lang.ref.WeakReference;
+import java.io.InputStreamReader;
 import java.lang.ref.Reference;
+import java.lang.ref.WeakReference;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
+import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -51,7 +52,7 @@ import java.util.StringTokenizer;
  * with a name corresponding to that requested.  Absolute paths to frameworks
  * are also accepted, either ending at the framework name (sans ".framework")
  * or the full path to the framework shared library
- * (e.g. CoreServices.framework/CoreServices). 
+ * (e.g. CoreServices.framework/CoreServices).
  * <li>Context class loader classpath.  Deployed native libraries may be
  * installed on the classpath under
  * <code>${os-prefix}/LIBRARY_FILENAME</code>, where <code>${os-prefix}</code>
@@ -70,14 +71,14 @@ public class NativeLibrary {
     private long handle;
     private final String libraryName;
     private final String libraryPath;
-    private final Map functions = new HashMap();
+    private final Map<String, Function> functions = new HashMap<String, Function>();
     final int callFlags;
     private String encoding;
-    final Map options;
+    final Map<String, ?> options;
 
-    private static final Map libraries = new HashMap();
-    private static final Map searchPaths = Collections.synchronizedMap(new HashMap());
-    private static final List librarySearchPath = new LinkedList();
+    private static final Map<String, Reference<NativeLibrary>> libraries = new HashMap<String, Reference<NativeLibrary>>();
+    private static final Map<String, List<String>> searchPaths = Collections.synchronizedMap(new HashMap<String, List<String>>());
+    private static final List<String> librarySearchPath = new ArrayList<String>();
 
     static {
         // Force initialization of native library
@@ -89,13 +90,12 @@ public class NativeLibrary {
         return name + "|" + flags + "|" + encoding;
     }
 
-    private NativeLibrary(String libraryName, String libraryPath, long handle, Map options) {
+    private NativeLibrary(String libraryName, String libraryPath, long handle, Map<String, ?> options) {
         this.libraryName = getLibraryName(libraryName);
         this.libraryPath = libraryPath;
         this.handle = handle;
         Object option = options.get(Library.OPTION_CALLING_CONVENTION);
-        int callingConvention = option instanceof Number
-            ? ((Number)option).intValue() : Function.C_CONVENTION;
+        int callingConvention = option instanceof Number ? ((Number)option).intValue() : Function.C_CONVENTION;
         this.callFlags = callingConvention;
         this.options = options;
         this.encoding = (String)options.get(Library.OPTION_STRING_ENCODING);
@@ -108,8 +108,14 @@ public class NativeLibrary {
         if (Platform.isWindows() && "kernel32".equals(this.libraryName.toLowerCase())) {
             synchronized(functions) {
                 Function f = new Function(this, "GetLastError", Function.ALT_CONVENTION, encoding) {
-                        Object invoke(Object[] args, Class returnType, boolean b) {
-                            return new Integer(Native.getLastError());
+                        @Override
+                        Object invoke(Object[] args, Class<?> returnType, boolean b, int fixedArgs) {
+                            return Integer.valueOf(Native.getLastError());
+                        }
+
+                        @Override
+                        Object invoke(Method invokingMethod, Class<?>[] paramTypes, Class<?> returnType, Object[] inArgs, Map<String, ?> options) {
+                            return Integer.valueOf(Native.getLastError());
                         }
                     };
                 functions.put(functionKey("GetLastError", callFlags, encoding), f);
@@ -118,7 +124,7 @@ public class NativeLibrary {
     }
 
     private static final int DEFAULT_OPEN_OPTIONS = -1;
-    private static int openFlags(Map options) {
+    private static int openFlags(Map<String, ?> options) {
         Object opt = options.get(Library.OPTION_OPEN_FLAGS);
         if (opt instanceof Number) {
             return ((Number)opt).intValue();
@@ -126,38 +132,39 @@ public class NativeLibrary {
         return DEFAULT_OPEN_OPTIONS;
     }
 
-    private static NativeLibrary loadLibrary(String libraryName, Map options) {
-	if (Native.DEBUG_LOAD) {
-	    System.out.println("Looking for library '" + libraryName + "'");
-	}
+    private static NativeLibrary loadLibrary(String libraryName, Map<String, ?> options) {
+        if (Native.DEBUG_LOAD) {
+            System.out.println("Looking for library '" + libraryName + "'");
+        }
 
         boolean isAbsolutePath = new File(libraryName).isAbsolute();
-        List searchPath = new LinkedList();
+        List<String> searchPath = new ArrayList<String>();
         int openFlags = openFlags(options);
 
         // Append web start path, if available.  Note that this does not
         // attempt any library name variations
         String webstartPath = Native.getWebStartLibraryPath(libraryName);
         if (webstartPath != null) {
-	    if (Native.DEBUG_LOAD) {
-		System.out.println("Adding web start path " + webstartPath);
-	    }
+            if (Native.DEBUG_LOAD) {
+                System.out.println("Adding web start path " + webstartPath);
+            }
             searchPath.add(webstartPath);
         }
 
         //
         // Prepend any custom search paths specifically for this library
         //
-        List customPaths = (List) searchPaths.get(libraryName);
+        List<String> customPaths = searchPaths.get(libraryName);
         if (customPaths != null) {
             synchronized (customPaths) {
                 searchPath.addAll(0, customPaths);
             }
         }
 
-	if (Native.DEBUG_LOAD) {
-	    System.out.println("Adding paths from jna.library.path: " + System.getProperty("jna.library.path"));
-	}
+        if (Native.DEBUG_LOAD) {
+            System.out.println("Adding paths from jna.library.path: " + System.getProperty("jna.library.path"));
+        }
+
         searchPath.addAll(initPaths("jna.library.path"));
         String libraryPath = findLibraryPath(libraryName, searchPath);
         long handle = 0;
@@ -167,92 +174,99 @@ public class NativeLibrary {
         // name if it cannot find the library.
         //
         try {
- 	    if (Native.DEBUG_LOAD) {
-		System.out.println("Trying " + libraryPath);
-	    }
+            if (Native.DEBUG_LOAD) {
+                System.out.println("Trying " + libraryPath);
+            }
             handle = Native.open(libraryPath, openFlags);
-        }
-        catch(UnsatisfiedLinkError e) {
+        } catch(UnsatisfiedLinkError e) {
             // Add the system paths back for all fallback searching
-	    if (Native.DEBUG_LOAD) {
-		System.out.println("Adding system paths: " + librarySearchPath);
-	    }
+            if (Native.DEBUG_LOAD) {
+                System.out.println("Adding system paths: " + librarySearchPath);
+            }
             searchPath.addAll(librarySearchPath);
         }
+
         try {
             if (handle == 0) {
                 libraryPath = findLibraryPath(libraryName, searchPath);
-		if (Native.DEBUG_LOAD) {
-		    System.out.println("Trying " + libraryPath);
-		}
+                if (Native.DEBUG_LOAD) {
+                    System.out.println("Trying " + libraryPath);
+                }
                 handle = Native.open(libraryPath, openFlags);
                 if (handle == 0) {
                     throw new UnsatisfiedLinkError("Failed to load library '" + libraryName + "'");
                 }
             }
-        }
-        catch(UnsatisfiedLinkError e) {
-            // For android, try to "preload" the library using 
+        } catch(UnsatisfiedLinkError e) {
+            // For android, try to "preload" the library using
             // System.loadLibrary(), which looks into the private /data/data
             // path, not found in any properties
             if (Platform.isAndroid()) {
                 try {
-		    if (Native.DEBUG_LOAD) {
-			System.out.println("Preload (via System.loadLibrary) " + libraryName);
-		    }
+                    if (Native.DEBUG_LOAD) {
+                        System.out.println("Preload (via System.loadLibrary) " + libraryName);
+                    }
                     System.loadLibrary(libraryName);
                     handle = Native.open(libraryPath, openFlags);
                 }
-                catch(UnsatisfiedLinkError e2) { e = e2; }
+                catch(UnsatisfiedLinkError e2) {
+                    e = e2;
+                }
             }
             else if (Platform.isLinux() || Platform.isFreeBSD()) {
                 //
                 // Failed to load the library normally - try to match libfoo.so.*
                 //
-		if (Native.DEBUG_LOAD) {
-		    System.out.println("Looking for version variants");
-		}
+                if (Native.DEBUG_LOAD) {
+                    System.out.println("Looking for version variants");
+                }
                 libraryPath = matchLibrary(libraryName, searchPath);
                 if (libraryPath != null) {
-		    if (Native.DEBUG_LOAD) {
-			System.out.println("Trying " + libraryPath);
-		    }
-		    try {
+                    if (Native.DEBUG_LOAD) {
+                        System.out.println("Trying " + libraryPath);
+                    }
+                    try {
                         handle = Native.open(libraryPath, openFlags);
                     }
-                    catch(UnsatisfiedLinkError e2) { e = e2; }
+                    catch(UnsatisfiedLinkError e2) {
+                        e = e2;
+                    }
                 }
             }
             // Search framework libraries on OS X
-            else if (Platform.isMac()
-                     && !libraryName.endsWith(".dylib")) {
-		if (Native.DEBUG_LOAD) {
-		    System.out.println("Looking for matching frameworks");
-		}
+            else if (Platform.isMac() && !libraryName.endsWith(".dylib")) {
+                if (Native.DEBUG_LOAD) {
+                    System.out.println("Looking for matching frameworks");
+                }
                 libraryPath = matchFramework(libraryName);
                 if (libraryPath != null) {
                     try {
-			if (Native.DEBUG_LOAD) {
-			    System.out.println("Trying " + libraryPath);
-			}
+                        if (Native.DEBUG_LOAD) {
+                            System.out.println("Trying " + libraryPath);
+                        }
                         handle = Native.open(libraryPath, openFlags);
                     }
-                    catch(UnsatisfiedLinkError e2) { e = e2; }
+                    catch(UnsatisfiedLinkError e2) {
+                        e = e2;
+                    }
                 }
             }
             // Try the same library with a "lib" prefix
             else if (Platform.isWindows() && !isAbsolutePath) {
-		if (Native.DEBUG_LOAD) {
-		    System.out.println("Looking for lib- prefix");
-		}
+                if (Native.DEBUG_LOAD) {
+                    System.out.println("Looking for lib- prefix");
+                }
                 libraryPath = findLibraryPath("lib" + libraryName, searchPath);
-		if (libraryPath != null) {
-		    if (Native.DEBUG_LOAD) {
-			System.out.println("Trying " + libraryPath);
-		    }
-		    try { handle = Native.open(libraryPath, openFlags); }
-		    catch(UnsatisfiedLinkError e2) { e = e2; }
-		}
+                if (libraryPath != null) {
+                    if (Native.DEBUG_LOAD) {
+                        System.out.println("Trying " + libraryPath);
+                    }
+                    try {
+                        handle = Native.open(libraryPath, openFlags);
+                    } catch(UnsatisfiedLinkError e2) {
+                        e = e2;
+                    }
+                }
             }
             // As a last resort, try to extract the library from the class
             // path, using the current context class loader.
@@ -269,17 +283,19 @@ public class NativeLibrary {
                         }
                     }
                 }
-                catch(IOException e2) { e = new UnsatisfiedLinkError(e2.getMessage()); }
+                catch(IOException e2) {
+                    e = new UnsatisfiedLinkError(e2.getMessage());
+                }
             }
 
             if (handle == 0) {
-                throw new UnsatisfiedLinkError("Unable to load library '" + libraryName + "': "
-                                               + e.getMessage());
+                throw new UnsatisfiedLinkError("Unable to load library '" + libraryName + "': " + e.getMessage());
             }
         }
-	if (Native.DEBUG_LOAD) {
-	    System.out.println("Found library '" + libraryName + "' at " + libraryPath);
-	}
+
+        if (Native.DEBUG_LOAD) {
+            System.out.println("Found library '" + libraryName + "' at " + libraryPath);
+        }
         return new NativeLibrary(libraryName, libraryPath, handle, options);
     }
 
@@ -339,7 +355,7 @@ public class NativeLibrary {
      *      the full path to the library (e.g. "/lib/libc.so.6").
      */
     public static final NativeLibrary getInstance(String libraryName) {
-        return getInstance(libraryName, Collections.EMPTY_MAP);
+        return getInstance(libraryName, Collections.<String, Object>emptyMap());
     }
 
     /**
@@ -359,9 +375,7 @@ public class NativeLibrary {
      *      or as a plain file within the classpath.
      */
     public static final NativeLibrary getInstance(String libraryName, ClassLoader classLoader) {
-        Map map = new HashMap();
-        map.put(Library.OPTION_CLASSLOADER, classLoader);
-        return getInstance(libraryName, map);
+        return getInstance(libraryName, Collections.singletonMap(Library.OPTION_CLASSLOADER, classLoader));
     }
 
     /**
@@ -374,15 +388,14 @@ public class NativeLibrary {
      * @param libraryName The library name to load.
      *      This can be short form (e.g. "c"),
      *      an explicit version (e.g. "libc.so.6" or
-     *      "QuickTime.framework/Versions/Current/QuickTime"), or 
-     *      the full (absolute) path to the library (e.g. "/lib/libc.so.6"). 
-     * @param options native library options for the given library (see {@link
-     * Library}).
+     *      "QuickTime.framework/Versions/Current/QuickTime"), or
+     *      the full (absolute) path to the library (e.g. "/lib/libc.so.6").
+     * @param libraryOptions Native library options for the given library (see {@link Library}).
      */
-    public static final NativeLibrary getInstance(String libraryName, Map options) {
-        options = new HashMap(options);
+    public static final NativeLibrary getInstance(String libraryName, Map<String, ?> libraryOptions) {
+        Map<String, Object> options = new HashMap<String, Object>(libraryOptions);
         if (options.get(Library.OPTION_CALLING_CONVENTION) == null) {
-            options.put(Library.OPTION_CALLING_CONVENTION, new Integer(Function.C_CONVENTION));
+            options.put(Library.OPTION_CALLING_CONVENTION, Integer.valueOf(Function.C_CONVENTION));
         }
 
         // Use current process to load libraries we know are already
@@ -392,8 +405,8 @@ public class NativeLibrary {
             libraryName = null;
         }
         synchronized (libraries) {
-            WeakReference ref = (WeakReference)libraries.get(libraryName + options);
-            NativeLibrary library = ref != null ? (NativeLibrary)ref.get() : null;
+            Reference<NativeLibrary> ref = libraries.get(libraryName + options);
+            NativeLibrary library = (ref != null) ? ref.get() : null;
 
             if (library == null) {
                 if (libraryName == null) {
@@ -402,7 +415,7 @@ public class NativeLibrary {
                 else {
                     library = loadLibrary(libraryName, options);
                 }
-                ref = new WeakReference(library);
+                ref = new WeakReference<NativeLibrary>(library);
                 libraries.put(library.getName() + options, ref);
                 File file = library.getFile();
                 if (file != null) {
@@ -430,7 +443,7 @@ public class NativeLibrary {
      * mapped by some other mechanism, without having to reference or even
      * know the exact name of the native library.
      */
-    public static synchronized final NativeLibrary getProcess(Map options) {
+    public static synchronized final NativeLibrary getProcess(Map<String, ?> options) {
         return getInstance(null, options);
     }
 
@@ -444,15 +457,16 @@ public class NativeLibrary {
      */
     public static final void addSearchPath(String libraryName, String path) {
         synchronized (searchPaths) {
-            List customPaths = (List) searchPaths.get(libraryName);
+            List<String> customPaths = searchPaths.get(libraryName);
             if (customPaths == null) {
-                customPaths = Collections.synchronizedList(new LinkedList());
+                customPaths = Collections.synchronizedList(new ArrayList<String>());
                 searchPaths.put(libraryName, customPaths);
             }
 
             customPaths.add(path);
         }
     }
+
     /**
      * Create a new {@link Function} that is linked with a native
      * function that follows the NativeLibrary's calling convention.
@@ -460,8 +474,8 @@ public class NativeLibrary {
      * <p>The allocated instance represents a pointer to the named native
      * function from the library.
      *
-     * @param	functionName
-     *			Name of the native function to be linked with
+     * @param    functionName
+     *            Name of the native function to be linked with
      * @throws   UnsatisfiedLinkError if the function is not found
      */
     public Function getFunction(String functionName) {
@@ -475,17 +489,16 @@ public class NativeLibrary {
      * <p>The allocated instance represents a pointer to the named native
      * function from the library.
      *
-     * @param	name
-     *			Name of the native function to be linked with.  Uses a
-     *			function mapper option if one was provided to
-     *			transform the name.
-     * @param	method
-     *			Method to which the native function is to be mapped
+     * @param    name
+     *            Name of the native function to be linked with.  Uses a
+     *            function mapper option if one was provided to
+     *            transform the name.
+     * @param    method
+     *            Method to which the native function is to be mapped
      * @throws   UnsatisfiedLinkError if the function is not found
      */
     Function getFunction(String name, Method method) {
-        FunctionMapper mapper = (FunctionMapper)
-            options.get(Library.OPTION_FUNCTION_MAPPER);
+        FunctionMapper mapper = (FunctionMapper) options.get(Library.OPTION_FUNCTION_MAPPER);
         if (mapper != null) {
             name = mapper.getFunctionName(this, method);
         }
@@ -495,7 +508,7 @@ public class NativeLibrary {
             name = name.substring(prefix.length());
         }
         int flags = this.callFlags;
-        Class[] etypes = method.getExceptionTypes();
+        Class<?>[] etypes = method.getExceptionTypes();
         for (int i=0;i < etypes.length;i++) {
             if (LastErrorException.class.isAssignableFrom(etypes[i])) {
                 flags |= Function.THROW_LAST_ERROR;
@@ -508,10 +521,10 @@ public class NativeLibrary {
      * Create a new  {@link Function} that is linked with a native
      * function that follows a given calling flags.
      *
-     * @param	functionName
-     *			Name of the native function to be linked with
-     * @param	callFlags
-     *			Flags affecting the function invocation
+     * @param    functionName
+     *            Name of the native function to be linked with
+     * @param    callFlags
+     *            Flags affecting the function invocation
      * @throws   UnsatisfiedLinkError if the function is not found
      */
     public Function getFunction(String functionName, int callFlags) {
@@ -522,21 +535,22 @@ public class NativeLibrary {
      * Create a new  {@link Function} that is linked with a native
      * function that follows a given calling flags.
      *
-     * @param	functionName
-     *			Name of the native function to be linked with
-     * @param	callFlags
-     *			Flags affecting the function invocation
+     * @param    functionName
+     *            Name of the native function to be linked with
+     * @param    callFlags
+     *            Flags affecting the function invocation
      * @param   encoding
      *                  Encoding to use to convert between Java and native
-     *                  strings. 
+     *                  strings.
      * @throws   UnsatisfiedLinkError if the function is not found
      */
     public Function getFunction(String functionName, int callFlags, String encoding) {
-        if (functionName == null)
+        if (functionName == null) {
             throw new NullPointerException("Function name may not be null");
+        }
         synchronized (functions) {
             String key = functionKey(functionName, callFlags, encoding);
-            Function function = (Function) functions.get(key);
+            Function function = functions.get(key);
             if (function == null) {
                 function = new Function(this, functionName, callFlags, encoding);
                 functions.put(key, function);
@@ -545,8 +559,8 @@ public class NativeLibrary {
         }
     }
 
-    /** Returns this native library instance's options. */
-    public Map getOptions() {
+    /** @return this native library instance's options. */
+    public Map<String, ?> getOptions() {
         return options;
     }
 
@@ -558,11 +572,8 @@ public class NativeLibrary {
     public Pointer getGlobalVariableAddress(String symbolName) {
         try {
             return new Pointer(getSymbolAddress(symbolName));
-        }
-        catch(UnsatisfiedLinkError e) {
-            throw new UnsatisfiedLinkError("Error looking up '"
-                                           + symbolName + "': "
-                                           + e.getMessage());
+        } catch(UnsatisfiedLinkError e) {
+            throw new UnsatisfiedLinkError("Error looking up '" + symbolName + "': " + e.getMessage());
         }
     }
 
@@ -576,6 +587,8 @@ public class NativeLibrary {
         }
         return Native.findSymbol(handle, name);
     }
+
+    @Override
     public String toString() {
         return "Native Library <" + libraryPath + "@" + handle + ">";
     }
@@ -593,19 +606,19 @@ public class NativeLibrary {
         return new File(libraryPath);
     }
     /** Close the library when it is no longer referenced. */
+    @Override
     protected void finalize() {
         dispose();
     }
 
     /** Close all open native libraries. */
     static void disposeAll() {
-        Set values;
+        Set<Reference<NativeLibrary>> values;
         synchronized(libraries) {
-            values = new HashSet(libraries.values());
+            values = new LinkedHashSet<Reference<NativeLibrary>>(libraries.values());
         }
-        for (Iterator i=values.iterator();i.hasNext();) {
-            Reference ref = (WeakReference)i.next();
-            NativeLibrary lib = (NativeLibrary)ref.get();
+        for (Reference<NativeLibrary> ref : values) {
+            NativeLibrary lib = ref.get();
             if (lib != null) {
                 lib.dispose();
             }
@@ -614,14 +627,20 @@ public class NativeLibrary {
 
     /** Close the native library we're mapped to. */
     public void dispose() {
+        Set<String> keys = new HashSet<String>();
         synchronized(libraries) {
-            for (Iterator i=libraries.values().iterator();i.hasNext();) {
-                Reference ref = (WeakReference)i.next();
+            for (Map.Entry<String, Reference<NativeLibrary>> e : libraries.entrySet()) {
+                Reference<NativeLibrary> ref = e.getValue();
                 if (ref.get() == this) {
-                    i.remove();
+                    keys.add(e.getKey());
                 }
             }
+
+            for (String k : keys) {
+                libraries.remove(k);
+            }
         }
+
         synchronized(this) {
             if (handle != 0) {
                 Native.close(handle);
@@ -630,13 +649,13 @@ public class NativeLibrary {
         }
     }
 
-    private static List initPaths(String key) {
+    private static List<String> initPaths(String key) {
         String value = System.getProperty(key, "");
         if ("".equals(value)) {
-            return Collections.EMPTY_LIST;
+            return Collections.emptyList();
         }
         StringTokenizer st = new StringTokenizer(value, File.pathSeparator);
-        List list = new ArrayList();
+        List<String> list = new ArrayList<String>();
         while (st.hasMoreTokens()) {
             String path = st.nextToken();
             if (!"".equals(path)) {
@@ -647,7 +666,7 @@ public class NativeLibrary {
     }
 
     /** Use standard library search paths to find the library. */
-    private static String findLibraryPath(String libName, List searchPath) {
+    private static String findLibraryPath(String libName, List<String> searchPath) {
 
         //
         // If a full path to the library was specified, don't search for it
@@ -662,8 +681,7 @@ public class NativeLibrary {
         String name = mapSharedLibraryName(libName);
 
         // Search in the JNA paths for it
-        for (Iterator it = searchPath.iterator(); it.hasNext(); ) {
-            String path = (String)it.next();
+        for (String path : searchPath) {
             File file = new File(path, name);
             if (file.exists()) {
                 return file.getAbsolutePath();
@@ -713,7 +731,7 @@ public class NativeLibrary {
                 return libName;
             }
         }
-        else if (Platform.isAIX()) {	// can be libx.a, libx.a(shr.o), libx.so
+        else if (Platform.isAIX()) {    // can be libx.a, libx.a(shr.o), libx.so
             if (libName.startsWith("lib")) {
                 return libName;
             }
@@ -748,12 +766,13 @@ public class NativeLibrary {
      * where /usr/lib/libc.so does not exist, or it is not a valid symlink to
      * a versioned file (e.g. /lib/libc.so.6).
      */
-    static String matchLibrary(final String libName, List searchPath) {
-    	File lib = new File(libName);
+    static String matchLibrary(final String libName, List<String> searchPath) {
+        File lib = new File(libName);
         if (lib.isAbsolute()) {
-            searchPath = Arrays.asList(new String[] { lib.getParent() });
+            searchPath = Arrays.asList(lib.getParent());
         }
         FilenameFilter filter = new FilenameFilter() {
+                @Override
                 public boolean accept(File dir, String filename) {
                     return (filename.startsWith("lib" + libName + ".so")
                             || (filename.startsWith(libName + ".so")
@@ -762,9 +781,9 @@ public class NativeLibrary {
                 }
             };
 
-        List matches = new LinkedList();
-        for (Iterator it = searchPath.iterator(); it.hasNext(); ) {
-            File[] files = new File((String) it.next()).listFiles(filter);
+        Collection<File> matches = new LinkedList<File>();
+        for (String path : searchPath) {
+            File[] files = new File(path).listFiles(filter);
             if (files != null && files.length > 0) {
                 matches.addAll(Arrays.asList(files));
             }
@@ -775,8 +794,8 @@ public class NativeLibrary {
         // i.e. libc.so.6 is preferred over libc.so.5
         double bestVersion = -1;
         String bestMatch = null;
-        for (Iterator it = matches.iterator(); it.hasNext(); ) {
-            String path = ((File) it.next()).getAbsolutePath();
+        for (File f : matches) {
+            String path = f.getAbsolutePath();
             String ver = path.substring(path.lastIndexOf(".so.") + 4);
             double version = parseVersion(ver);
             if (version > bestVersion) {
@@ -788,10 +807,10 @@ public class NativeLibrary {
     }
 
     static double parseVersion(String ver) {
-    	double v = 0;
-    	double divisor = 1;
-    	int dot = ver.indexOf(".");
-    	while (ver != null) {
+        double v = 0;
+        double divisor = 1;
+        int dot = ver.indexOf(".");
+        while (ver != null) {
             String num;
             if (dot != -1) {
                 num = ver.substring(0, dot);
@@ -809,9 +828,9 @@ public class NativeLibrary {
                 return 0;
             }
             divisor *= 100;
-    	}
+        }
 
-    	return v;
+        return v;
     }
 
     static {
@@ -906,7 +925,7 @@ public class NativeLibrary {
             ? "-kfreebsd"
             : (Platform.isGNU() ? "" : "-linux");
         String libc = "-gnu";
-        
+
         if (Platform.isIntel()) {
             cpu = (Platform.is64Bit() ? "x86_64" : "i386");
         }
@@ -917,7 +936,7 @@ public class NativeLibrary {
             cpu = "arm";
             libc = "-gnueabi";
         }
-        
+
         return cpu + kernel + libc;
     }
 
