@@ -8,29 +8,29 @@
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.  
+ * Lesser General Public License for more details.
  */
 package com.sun.jna;
 
 import java.io.ByteArrayOutputStream;
-import java.io.File;
 import java.io.PrintStream;
+import java.lang.ref.Reference;
 import java.lang.ref.WeakReference;
 import java.util.Arrays;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.WeakHashMap;
 
-import junit.framework.TestCase;
-
 import com.sun.jna.Callback.UncaughtExceptionHandler;
 import com.sun.jna.CallbacksTest.TestLibrary.CbCallback;
 import com.sun.jna.ptr.IntByReference;
 import com.sun.jna.ptr.PointerByReference;
 import com.sun.jna.win32.W32APIOptions;
+
+import junit.framework.TestCase;
 
 /** Exercise callback-related functionality.
  *
@@ -39,7 +39,7 @@ import com.sun.jna.win32.W32APIOptions;
 //@SuppressWarnings("unused")
 public class CallbacksTest extends TestCase implements Paths {
 
-    // On OSX, on Oracle JVM 1.8+, pthread cleanup thinks the native thread is 
+    // On OSX, on Oracle JVM 1.8+, pthread cleanup thinks the native thread is
     // not attached, and the JVM never unmaps the defunct native thread.  In
     // order to avoid this situation causing tests to time out, we need to
     // explicitly detach the native thread after our Java code is done with it.
@@ -65,16 +65,19 @@ public class CallbacksTest extends TestCase implements Paths {
     }
 
     public static class SmallTestStructure extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("value");
         public double value;
         public static int allocations = 0;
+        @Override
         protected void allocateMemory(int size) {
             super.allocateMemory(size);
             ++allocations;
         }
         public SmallTestStructure() { }
         public SmallTestStructure(Pointer p) { super(p); read(); }
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "value" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public static class TestStructure extends Structure {
@@ -82,13 +85,16 @@ public class CallbacksTest extends TestCase implements Paths {
         public static interface TestCallback extends Callback {
             TestStructure.ByValue callback(TestStructure.ByValue s);
         }
+
+        public static final List<String> FIELDS = createFieldsOrder("c", "s", "i", "j", "inner");
         public byte c;
         public short s;
         public int i;
         public long j;
         public SmallTestStructure inner;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "c", "s", "i", "j", "inner" }); 
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public static interface TestLibrary extends Library {
@@ -114,6 +120,7 @@ public class CallbacksTest extends TestCase implements Paths {
             void customMethodName();
         }
         abstract class VoidCallbackCustomAbstract implements VoidCallbackCustom {
+            @Override
             public void customMethodName() { }
         }
         class VoidCallbackCustomDerived extends VoidCallbackCustomAbstract { }
@@ -189,7 +196,8 @@ public class CallbacksTest extends TestCase implements Paths {
 
         class CbStruct extends Structure {
             public Callback cb;
-            protected List getFieldOrder() {
+            @Override
+            protected List<String> getFieldOrder() {
                 return Arrays.asList(new String[] { "cb" });
             }
         }
@@ -208,10 +216,12 @@ public class CallbacksTest extends TestCase implements Paths {
 
     TestLibrary lib;
 
+    @Override
     protected void setUp() {
-        lib = (TestLibrary)Native.loadLibrary("testlib", TestLibrary.class);
+        lib = Native.loadLibrary("testlib", TestLibrary.class);
     }
-    
+
+    @Override
     protected void tearDown() {
         lib = null;
     }
@@ -222,15 +232,19 @@ public class CallbacksTest extends TestCase implements Paths {
         public Custom(int value) {
             this.value = value;
         }
+        @Override
         public Object fromNative(Object nativeValue, FromNativeContext context) {
             return new Custom(((Integer)nativeValue).intValue());
         }
-        public Class nativeType() {
+        @Override
+        public Class<?> nativeType() {
             return Integer.class;
         }
+        @Override
         public Object toNative() {
-            return new Integer(value);
+            return Integer.valueOf(value);
         }
+        @Override
         public boolean equals(Object o) {
             return o instanceof Custom && ((Custom)o).value == value;
         }
@@ -242,8 +256,8 @@ public class CallbacksTest extends TestCase implements Paths {
         try {
             CallbackReference.getCallback(TestLibrary.VoidCallback.class, new Pointer(0));
             fail("Null pointer lookup should fail");
-        }
-        catch(NullPointerException e) {
+        } catch(NullPointerException e) {
+            // expected
         }
     }
 
@@ -295,7 +309,7 @@ public class CallbacksTest extends TestCase implements Paths {
 
     public void testNativeFunctionPointerStringValue() {
         Callback cb = CallbackReference.getCallback(TestLibrary.VoidCallback.class, new Pointer(getName().hashCode()));
-        Class cls = CallbackReference.findCallbackClass(cb.getClass());
+        Class<?> cls = CallbackReference.findCallbackClass(cb.getClass());
         assertTrue("toString should include Java Callback type: " + cb + " ("
                    + cls + ")", cb.toString().indexOf(cls.getName()) != -1);
     }
@@ -303,12 +317,12 @@ public class CallbacksTest extends TestCase implements Paths {
     public void testLookupSameCallback() {
         Callback cb = CallbackReference.getCallback(TestLibrary.VoidCallback.class, new Pointer(getName().hashCode()));
         Callback cb2 = CallbackReference.getCallback(TestLibrary.VoidCallback.class, new Pointer(getName().hashCode()));
-        
+
         assertEquals("Callback lookups for same pointer should return same Callback object", cb, cb2);
     }
 
     // Allow direct tests to override
-    protected Map callbackCache() {
+    protected Map<Callback, CallbackReference> callbackCache() {
         return CallbackReference.callbackMap;
     }
 
@@ -316,30 +330,29 @@ public class CallbacksTest extends TestCase implements Paths {
     public void testGCCallbackOnFinalize() throws Exception {
         final boolean[] called = { false };
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 called[0] = true;
             }
         };
         lib.callVoidCallback(cb);
         assertTrue("Callback not called", called[0]);
-        
-        Map refs = new WeakHashMap(callbackCache());
+
+        Map<Callback, CallbackReference> refs = new WeakHashMap<Callback, CallbackReference>(callbackCache());
         assertTrue("Callback not cached", refs.containsKey(cb));
-        CallbackReference ref = (CallbackReference)refs.get(cb);
+        CallbackReference ref = refs.get(cb);
         refs = callbackCache();
         Pointer cbstruct = ref.cbstruct;
-        
+
         cb = null;
         System.gc();
         for (int i = 0; i < 100 && (ref.get() != null || refs.containsValue(ref)); ++i) {
-            try {
-                Thread.sleep(10); // Give the GC a chance to run
-                System.gc();
-            } finally {}
+            Thread.sleep(10); // Give the GC a chance to run
+            System.gc();
         }
         assertNull("Callback not GC'd", ref.get());
         assertFalse("Callback still in map", refs.containsValue(ref));
-        
+
         ref = null;
         System.gc();
         for (int i = 0; i < 100 && (cbstruct.peer != 0 || refs.size() > 0); ++i) {
@@ -352,9 +365,10 @@ public class CallbacksTest extends TestCase implements Paths {
         }
         assertEquals("Callback trampoline not freed", 0, cbstruct.peer);
     }
-    
+
     public void testFindCallbackInterface() {
         TestLibrary.Int32Callback cb = new TestLibrary.Int32Callback() {
+            @Override
             public int callback(int arg, int arg2) {
                 return arg + arg2;
             }
@@ -367,6 +381,7 @@ public class CallbacksTest extends TestCase implements Paths {
     public void testCallVoidCallback() {
         final boolean[] called = { false };
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 called[0] = true;
             }
@@ -379,6 +394,7 @@ public class CallbacksTest extends TestCase implements Paths {
         final int MAGIC = 0x11111111;
         final boolean[] called = { false };
         TestLibrary.Int32Callback cb = new TestLibrary.Int32Callback() {
+            @Override
             public int callback(int arg, int arg2) {
                 called[0] = true;
                 return arg + arg2;
@@ -387,17 +403,18 @@ public class CallbacksTest extends TestCase implements Paths {
         final int EXPECTED = MAGIC*3;
         int value = lib.callInt32Callback(cb, MAGIC, MAGIC*2);
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong callback value", Integer.toHexString(EXPECTED), 
+        assertEquals("Wrong callback value", Integer.toHexString(EXPECTED),
                      Integer.toHexString(value));
-        
+
         value = lib.callInt32Callback(cb, -1, -2);
         assertEquals("Wrong callback return", -3, value);
     }
-    
+
     public void testCallInt64Callback() {
         final long MAGIC = 0x1111111111111111L;
         final boolean[] called = { false };
         TestLibrary.Int64Callback cb = new TestLibrary.Int64Callback() {
+            @Override
             public long callback(long arg, long arg2) {
                 called[0] = true;
                 return arg + arg2;
@@ -406,17 +423,18 @@ public class CallbacksTest extends TestCase implements Paths {
         final long EXPECTED = MAGIC*3;
         long value = lib.callInt64Callback(cb, MAGIC, MAGIC*2);
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong callback value", Long.toHexString(EXPECTED), 
+        assertEquals("Wrong callback value", Long.toHexString(EXPECTED),
                      Long.toHexString(value));
-        
+
         value = lib.callInt64Callback(cb, -1, -2);
         assertEquals("Wrong callback return", -3, value);
     }
-    
+
     public void testCallFloatCallback() {
         final boolean[] called = { false };
         final float[] args = { 0, 0 };
         TestLibrary.FloatCallback cb = new TestLibrary.FloatCallback() {
+            @Override
             public float callback(float arg, float arg2) {
                 called[0] = true;
                 args[0] = arg;
@@ -430,15 +448,16 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Wrong first argument", FLOAT_MAGIC, args[0], 0);
         assertEquals("Wrong second argument", FLOAT_MAGIC*2, args[1], 0);
         assertEquals("Wrong callback value", EXPECTED, value, 0);
-        
+
         value = lib.callFloatCallback(cb, -1f, -2f);
         assertEquals("Wrong callback return", -3f, value, 0);
     }
-    
+
     public void testCallDoubleCallback() {
         final boolean[] called = { false };
         final double[] args = { 0, 0 };
         TestLibrary.DoubleCallback cb = new TestLibrary.DoubleCallback() {
+            @Override
             public double callback(double arg, double arg2) {
                 called[0] = true;
                 args[0] = arg;
@@ -451,18 +470,19 @@ public class CallbacksTest extends TestCase implements Paths {
         assertTrue("Callback not called", called[0]);
         assertEquals("Wrong first argument", DOUBLE_MAGIC, args[0], 0);
         assertEquals("Wrong second argument", DOUBLE_MAGIC*2, args[1], 0);
-        assertEquals("Wrong callback value", EXPECTED, value, 0); 
-        
+        assertEquals("Wrong callback value", EXPECTED, value, 0);
+
         value = lib.callDoubleCallback(cb, -1d, -2d);
         assertEquals("Wrong callback return", -3d, value, 0);
     }
-    
+
     public void testCallStructureCallback() {
         final boolean[] called = {false};
         final Pointer[] cbarg = { null };
         final SmallTestStructure s = new SmallTestStructure();
         final double MAGIC = 118.625;
         TestLibrary.StructureCallback cb = new TestLibrary.StructureCallback() {
+            @Override
             public SmallTestStructure callback(SmallTestStructure arg) {
                 called[0] = true;
                 cbarg[0] = arg.getPointer();
@@ -480,15 +500,16 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Structure return not synched",
                      MAGIC, value.value, 0d);
         // All structures involved should be created from pointers, with no
-        // memory allocation at all.  
+        // memory allocation at all.
         assertEquals("No structure memory should be allocated", 0, SmallTestStructure.allocations);
     }
-    
+
     public void testCallStructureArrayCallback() {
         final SmallTestStructure s = new SmallTestStructure();
         final SmallTestStructure[] array = (SmallTestStructure[])s.toArray(2);
         final double MAGIC = 118.625;
         TestLibrary.StructureCallback cb = new TestLibrary.StructureCallback() {
+            @Override
             public SmallTestStructure callback(SmallTestStructure arg) {
                 SmallTestStructure[] array =
                     (SmallTestStructure[])arg.toArray(2);
@@ -503,11 +524,12 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Structure array element 1 not synched on callback return",
                      MAGIC*2, array[1].value, 0d);
     }
-    
+
     public void testCallBooleanCallback() {
         final boolean[] called = {false};
         final boolean[] cbargs = { false, false };
         TestLibrary.BooleanCallback cb = new TestLibrary.BooleanCallback() {
+            @Override
             public boolean callback(boolean arg, boolean arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -521,11 +543,12 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Wrong second callback argument", false, cbargs[1]);
         assertFalse("Wrong boolean return", value);
     }
-    
+
     public void testCallInt8Callback() {
         final boolean[] called = {false};
         final byte[] cbargs = { 0, 0 };
         TestLibrary.ByteCallback cb = new TestLibrary.ByteCallback() {
+            @Override
             public byte callback(byte arg, byte arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -533,27 +556,28 @@ public class CallbacksTest extends TestCase implements Paths {
                 return (byte)(arg + arg2);
             }
         };
-        final byte MAGIC = 0x11; 
+        final byte MAGIC = 0x11;
         byte value = lib.callInt8Callback(cb, MAGIC, (byte)(MAGIC*2));
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong first callback argument", 
-                     Integer.toHexString(MAGIC), 
+        assertEquals("Wrong first callback argument",
+                     Integer.toHexString(MAGIC),
                      Integer.toHexString(cbargs[0]));
-        assertEquals("Wrong second callback argument", 
-                     Integer.toHexString(MAGIC*2), 
+        assertEquals("Wrong second callback argument",
+                     Integer.toHexString(MAGIC*2),
                      Integer.toHexString(cbargs[1]));
-        assertEquals("Wrong byte return", 
-                     Integer.toHexString(MAGIC*3), 
+        assertEquals("Wrong byte return",
+                     Integer.toHexString(MAGIC*3),
                      Integer.toHexString(value));
-        
+
         value = lib.callInt8Callback(cb, (byte)-1, (byte)-2);
         assertEquals("Wrong byte return (hi bit)", (byte)-3, value);
     }
-    
+
     public void testCallInt16Callback() {
         final boolean[] called = {false};
         final short[] cbargs = { 0, 0 };
         TestLibrary.ShortCallback cb = new TestLibrary.ShortCallback() {
+            @Override
             public short callback(short arg, short arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -564,24 +588,25 @@ public class CallbacksTest extends TestCase implements Paths {
         final short MAGIC = 0x1111;
         short value = lib.callInt16Callback(cb, MAGIC, (short)(MAGIC*2));
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong first callback argument", 
-                     Integer.toHexString(MAGIC), 
+        assertEquals("Wrong first callback argument",
+                     Integer.toHexString(MAGIC),
                      Integer.toHexString(cbargs[0]));
-        assertEquals("Wrong second callback argument", 
-                     Integer.toHexString(MAGIC*2), 
+        assertEquals("Wrong second callback argument",
+                     Integer.toHexString(MAGIC*2),
                      Integer.toHexString(cbargs[1]));
-        assertEquals("Wrong short return", 
-                     Integer.toHexString(MAGIC*3), 
+        assertEquals("Wrong short return",
+                     Integer.toHexString(MAGIC*3),
                      Integer.toHexString(value));
 
         value = lib.callInt16Callback(cb, (short)-1, (short)-2);
         assertEquals("Wrong short return (hi bit)", (short)-3, value);
     }
-    
+
     public void testCallNativeLongCallback() {
         final boolean[] called = {false};
         final NativeLong[] cbargs = { null, null};
         TestLibrary.NativeLongCallback cb = new TestLibrary.NativeLongCallback() {
+            @Override
             public NativeLong callback(NativeLong arg, NativeLong arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -595,11 +620,12 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Wrong second callback argument", new NativeLong(2), cbargs[1]);
         assertEquals("Wrong boolean return", new NativeLong(3), value);
     }
-    
+
     public void testCallNativeMappedCallback() {
         final boolean[] called = {false};
         final Custom[] cbargs = { null, null};
         TestLibrary.CustomCallback cb = new TestLibrary.CustomCallback() {
+            @Override
             public Custom callback(Custom arg, Custom arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -613,11 +639,12 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Wrong second callback argument", new Custom(2), cbargs[1]);
         assertEquals("Wrong NativeMapped return", 3, value);
     }
-    
+
     public void testCallStringCallback() {
         final boolean[] called = {false};
         final String[] cbargs = { null, null };
         TestLibrary.StringCallback cb = new TestLibrary.StringCallback() {
+            @Override
             public String callback(String arg, String arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -633,23 +660,24 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Wrong String callback argument 1", VALUE2, cbargs[1]);
         assertEquals("Wrong String return", VALUE + VALUE2, value);
     }
-    
+
     public void testStringCallbackMemoryReclamation() throws InterruptedException {
         TestLibrary.StringCallback cb = new TestLibrary.StringCallback() {
+            @Override
             public String callback(String arg, String arg2) {
                 return arg + arg2;
             }
         };
 
         // A little internal groping
-        Map m = CallbackReference.allocations;
+        Map<?, ?> m = CallbackReference.allocations;
         m.clear();
 
         String arg = getName() + "1" + UNICODE;
         String arg2 = getName() + "2" + UNICODE;
         String value = lib.callStringCallback(cb, arg, arg2);
-        WeakReference ref = new WeakReference(value);
-        
+        WeakReference<Object> ref = new WeakReference<Object>(value);
+
         arg = null;
         value = null;
         System.gc();
@@ -667,6 +695,7 @@ public class CallbacksTest extends TestCase implements Paths {
         final boolean[] called = {false};
         final WString[] cbargs = { null, null };
         TestLibrary.WideStringCallback cb = new TestLibrary.WideStringCallback() {
+            @Override
             public WString callback(WString arg, WString arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -682,11 +711,12 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Wrong second callback argument", VALUE2, cbargs[1]);
         assertEquals("Wrong wide string return", new WString(VALUE.toString() + VALUE2.toString()), value);
     }
-    
+
     public void testCallStringArrayCallback() {
         final boolean[] called = {false};
         final String[][] cbargs = { null };
         TestLibrary.StringArrayCallback cb = new TestLibrary.StringArrayCallback() {
+            @Override
             public String[] callback(String[] arg) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -708,10 +738,11 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Terminating null should be removed from return value",
                      VALUE_ARRAY.length-1, result.length);
     }
-    
+
     public void testCallCallbackWithByReferenceArgument() {
     	final boolean[] called = {false};
         TestLibrary.CopyArgToByReference cb = new TestLibrary.CopyArgToByReference() {
+            @Override
             public int callback(int arg, IntByReference result) {
                 called[0] = true;
                 result.setValue(arg);
@@ -724,12 +755,13 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Wrong value returned", VALUE, value);
         assertEquals("Wrong value in by reference memory", VALUE, ref.getValue());
     }
-    
+
     public void testCallCallbackWithStructByValue() throws Exception {
         final boolean[] called = { false };
         final TestStructure.ByValue[] arg = { null };
         final TestStructure.ByValue s = new TestStructure.ByValue();
         TestStructure.TestCallback cb = new TestStructure.TestCallback() {
+            @Override
             public TestStructure.ByValue callback(TestStructure.ByValue s) {
                 // Copy the argument value for later comparison
                 called[0] = true;
@@ -741,7 +773,7 @@ public class CallbacksTest extends TestCase implements Paths {
         s.i = 0x33333333;
         s.j = 0x4444444444444444L;
         s.inner.value = 5;
-        
+
         TestStructure result = lib.callCallbackWithStructByValue(cb, s);
         assertTrue("Callback not called", called[0]);
         assertTrue("ByValue argument should own its own memory, instead was "
@@ -759,8 +791,8 @@ public class CallbacksTest extends TestCase implements Paths {
 	}
         assertTrue("Wrong value for callback result", s.dataEquals(result, true));
     }
-    
-    public void testUnionByValueCallbackArgument() throws Exception{ 
+
+    public void testUnionByValueCallbackArgument() throws Exception{
         TestLibrary.TestUnion arg = new TestLibrary.TestUnion();
         arg.setType(String.class);
         final String VALUE = getName() + UNICODE;
@@ -768,6 +800,7 @@ public class CallbacksTest extends TestCase implements Paths {
         final boolean[] called = { false };
         final TestLibrary.TestUnion[] cbvalue = { null };
         TestLibrary.TestUnion result = lib.testUnionByValueCallbackArgument(new TestLibrary.UnionCallback() {
+            @Override
             public TestLibrary.TestUnion invoke(TestLibrary.TestUnion v) {
                 called[0] = true;
                 v.setType(String.class);
@@ -786,6 +819,7 @@ public class CallbacksTest extends TestCase implements Paths {
 
     public void testCallCallbackWithCallbackArgumentAndResult() {
         TestLibrary.CbCallback cb = new TestLibrary.CbCallback() {
+            @Override
             public CbCallback callback(CbCallback arg) {
                 return arg;
             }
@@ -793,7 +827,7 @@ public class CallbacksTest extends TestCase implements Paths {
         TestLibrary.CbCallback cb2 = lib.callCallbackWithCallback(cb);
         assertEquals("Callback reference should be reused", cb, cb2);
     }
-    
+
     public void testDefaultCallbackExceptionHandler() {
         final RuntimeException ERROR = new RuntimeException(getName());
         PrintStream ps = System.err;
@@ -801,6 +835,7 @@ public class CallbacksTest extends TestCase implements Paths {
         System.setErr(new PrintStream(s));
         try {
             TestLibrary.CbCallback cb = new TestLibrary.CbCallback() {
+                @Override
                 public CbCallback callback(CbCallback arg) {
                     throw ERROR;
                 }
@@ -822,6 +857,7 @@ public class CallbacksTest extends TestCase implements Paths {
         final Callback CALLBACK[] = { null };
         UncaughtExceptionHandler old = Native.getCallbackExceptionHandler();
         UncaughtExceptionHandler handler = new UncaughtExceptionHandler() {
+            @Override
             public void uncaughtException(Callback cb, Throwable e) {
                 CALLBACK[0] = cb;
                 CAUGHT[0] = e;
@@ -830,6 +866,7 @@ public class CallbacksTest extends TestCase implements Paths {
         Native.setCallbackExceptionHandler(handler);
         try {
             TestLibrary.CbCallback cb = new TestLibrary.CbCallback() {
+                @Override
                 public CbCallback callback(CbCallback arg) {
                     throw ERROR;
                 }
@@ -852,6 +889,7 @@ public class CallbacksTest extends TestCase implements Paths {
         final Callback CALLBACK[] = { null };
         UncaughtExceptionHandler old = Native.getCallbackExceptionHandler();
         UncaughtExceptionHandler handler = new UncaughtExceptionHandler() {
+            @Override
             public void uncaughtException(Callback cb, Throwable e) {
                 CALLBACK[0] = cb;
                 CAUGHT[0] = e;
@@ -860,16 +898,20 @@ public class CallbacksTest extends TestCase implements Paths {
         Native.setCallbackExceptionHandler(handler);
         try {
             class TestProxy implements CallbackProxy, TestLibrary.CbCallback {
+                @Override
                 public CbCallback callback(CbCallback arg) {
                     throw new Error("Should never be called");
                 }
+                @Override
                 public Object callback(Object[] args) {
                     throw ERROR;
                 }
-                public Class[] getParameterTypes() {
+                @Override
+                public Class<?>[] getParameterTypes() {
                     return new Class[] { CbCallback.class };
                 }
-                public Class getReturnType() {
+                @Override
+                public Class<?> getReturnType() {
                     return CbCallback.class;
                 }
             };
@@ -895,8 +937,9 @@ public class CallbacksTest extends TestCase implements Paths {
         TestLibrary.Int32CallbackX cb = lib.returnCallback();
         assertNotNull("Callback should not be null", cb);
         assertEquals("Callback should be callable", 1, cb.callback(1));
-        
+
         TestLibrary.Int32CallbackX cb2 = new TestLibrary.Int32CallbackX() {
+            @Override
             public int callback(int arg) {
                 return 0;
             }
@@ -906,7 +949,7 @@ public class CallbacksTest extends TestCase implements Paths {
         assertSame("Existing native function wrapper should be reused",
                    cb, lib.returnCallbackArgument(cb));
     }
-    
+
     public void testCallCallbackInStructure() {
         final boolean[] flag = {false};
         final TestLibrary.CbStruct s = new TestLibrary.CbStruct();
@@ -922,9 +965,11 @@ public class CallbacksTest extends TestCase implements Paths {
     public void testCustomCallbackMethodName() {
     	final boolean[] called = {false};
         TestLibrary.VoidCallbackCustom cb = new TestLibrary.VoidCallbackCustom() {
+            @Override
             public void customMethodName() {
                 called[0] = true;
             }
+            @Override
             public String toString() {
                 return "Some debug output";
             }
@@ -937,6 +982,7 @@ public class CallbacksTest extends TestCase implements Paths {
     	final boolean[] called = {false};
         final boolean[] exceptionThrown = {true};
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 called[0] = true;
                 try {
@@ -961,41 +1007,48 @@ public class CallbacksTest extends TestCase implements Paths {
     protected static class CallbackTypeMapper extends DefaultTypeMapper {
         public int fromNativeConversions = 0;
         public int toNativeConversions = 0;
-        public void clear() { 
+        public void clear() {
             fromNativeConversions = 0;
             toNativeConversions = 0;
         }
         {
             // Convert java doubles into native integers and back
             TypeConverter converter = new TypeConverter() {
+                @Override
                 public Object fromNative(Object value, FromNativeContext context) {
                     ++fromNativeConversions;
-                    return new Double(((Integer)value).intValue());
+                    return Double.valueOf(((Integer)value).intValue());
                 }
-                public Class nativeType() {
+                @Override
+                public Class<?> nativeType() {
                     return Integer.class;
                 }
+                @Override
                 public Object toNative(Object value, ToNativeContext ctx) {
                     ++toNativeConversions;
-                    return new Integer(((Double)value).intValue());
+                    return Integer.valueOf(((Double)value).intValue());
                 }
             };
             addTypeConverter(double.class, converter);
             converter = new TypeConverter() {
+                @Override
                 public Object fromNative(Object value, FromNativeContext context) {
                     ++fromNativeConversions;
-                    return new Float(((Long)value).intValue());
+                    return Float.valueOf(((Long)value).intValue());
                 }
-                public Class nativeType() {
+                @Override
+                public Class<?> nativeType() {
                     return Long.class;
                 }
+                @Override
                 public Object toNative(Object value, ToNativeContext ctx) {
                     ++toNativeConversions;
-                    return new Long(((Float)value).longValue());
+                    return Long.valueOf(((Float)value).longValue());
                 }
             };
             addTypeConverter(float.class, converter);
             converter = new TypeConverter() {
+                @Override
                 public Object fromNative(Object value, FromNativeContext context) {
                     ++fromNativeConversions;
                     if (value == null) {
@@ -1006,9 +1059,11 @@ public class CallbacksTest extends TestCase implements Paths {
                     }
                     return value.toString();
                 }
-                public Class nativeType() {
+                @Override
+                public Class<?> nativeType() {
                     return WString.class;
                 }
+                @Override
                 public Object toNative(Object value, ToNativeContext ctx) {
                     ++toNativeConversions;
                     return new WString(value.toString());
@@ -1020,11 +1075,8 @@ public class CallbacksTest extends TestCase implements Paths {
 
     public static interface CallbackTestLibrary extends Library {
         final CallbackTypeMapper _MAPPER = new CallbackTypeMapper();
-        final Map _OPTIONS = new HashMap() {
-            {
-                put(Library.OPTION_TYPE_MAPPER, _MAPPER);
-            }
-        };
+        final Map<String, ?> _OPTIONS = Collections.singletonMap(Library.OPTION_TYPE_MAPPER, _MAPPER);
+
         interface DoubleCallback extends Callback {
             double callback(double arg, double arg2);
         }
@@ -1040,31 +1092,31 @@ public class CallbacksTest extends TestCase implements Paths {
     }
 
     protected CallbackTestLibrary loadCallbackTestLibrary() {
-        return (CallbackTestLibrary)
-            Native.loadLibrary("testlib", CallbackTestLibrary.class, CallbackTestLibrary._OPTIONS);
+        return Native.loadLibrary("testlib", CallbackTestLibrary.class, CallbackTestLibrary._OPTIONS);
     }
 
     /** This test is here instead of NativeTest in order to facilitate running
         the exact same test on a direct-mapped library without the tests
         interfering with one another due to persistent/cached state in library
-        loading. 
+        loading.
     */
     public void testCallbackUsesTypeMapper() throws Exception {
         CallbackTestLibrary lib = loadCallbackTestLibrary();
-        lib._MAPPER.clear();
+        CallbackTestLibrary._MAPPER.clear();
 
         final double[] ARGS = new double[2];
 
         CallbackTestLibrary.DoubleCallback cb = new CallbackTestLibrary.DoubleCallback() {
+            @Override
             public double callback(double arg, double arg2) {
                 ARGS[0] = arg;
                 ARGS[1] = arg2;
                 return arg + arg2;
             }
         };
-        assertEquals("Wrong type mapper for callback class", lib._MAPPER,
+        assertEquals("Wrong type mapper for callback class", CallbackTestLibrary._MAPPER,
                      Native.getTypeMapper(CallbackTestLibrary.DoubleCallback.class));
-        assertEquals("Wrong type mapper for callback object", lib._MAPPER,
+        assertEquals("Wrong type mapper for callback object", CallbackTestLibrary._MAPPER,
                      Native.getTypeMapper(cb.getClass()));
 
         double result = lib.callInt32Callback(cb, -1, -2);
@@ -1073,27 +1125,28 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Incorrect result of callback invocation", -3, result, 0);
 
         // Once per argument, then again for return value (convert native int->Java double)
-        assertEquals("Type mapper not called for arguments", 3, lib._MAPPER.fromNativeConversions);
+        assertEquals("Type mapper not called for arguments", 3, CallbackTestLibrary._MAPPER.fromNativeConversions);
         // Once per argument, then again for return value (convert Java double->native int)
-        assertEquals("Type mapper not called for result", 3, lib._MAPPER.toNativeConversions);
+        assertEquals("Type mapper not called for result", 3, CallbackTestLibrary._MAPPER.toNativeConversions);
     }
 
     public void testTypeMapperWithWideStrings() throws Exception {
         CallbackTestLibrary lib = loadCallbackTestLibrary();
-        lib._MAPPER.clear();
+        CallbackTestLibrary._MAPPER.clear();
 
         final String[] ARGS = new String[2];
 
         CallbackTestLibrary.WStringCallback cb = new CallbackTestLibrary.WStringCallback() {
+            @Override
             public String callback(String arg, String arg2) {
                 ARGS[0] = arg;
                 ARGS[1] = arg2;
                 return arg + arg2;
             }
         };
-        assertEquals("Wrong type mapper for callback class", lib._MAPPER,
+        assertEquals("Wrong type mapper for callback class", CallbackTestLibrary._MAPPER,
                      Native.getTypeMapper(CallbackTestLibrary.WStringCallback.class));
-        assertEquals("Wrong type mapper for callback object", lib._MAPPER,
+        assertEquals("Wrong type mapper for callback object", CallbackTestLibrary._MAPPER,
                      Native.getTypeMapper(cb.getClass()));
 
         final String[] EXPECTED = { "magic" + UNICODE, getName() + UNICODE };
@@ -1103,9 +1156,9 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Incorrect result of callback invocation", EXPECTED[0] + EXPECTED[1], result);
 
         // Once per argument, then again for return value (convert const wchar_t*->Java String)
-        assertEquals("Type mapper not called for arguments", 3, lib._MAPPER.fromNativeConversions);
+        assertEquals("Type mapper not called for arguments", 3, CallbackTestLibrary._MAPPER.fromNativeConversions);
         // Once per argument, then again for return value (convert Java String->const wchar_t*)
-        assertEquals("Type mapper not called for result", 3, lib._MAPPER.toNativeConversions);
+        assertEquals("Type mapper not called for result", 3, CallbackTestLibrary._MAPPER.toNativeConversions);
     }
 
     public void testCallbackUsesTypeMapperWithDifferentReturnTypeSize() throws Exception {
@@ -1114,15 +1167,16 @@ public class CallbacksTest extends TestCase implements Paths {
         final float[] ARGS = new float[2];
 
         CallbackTestLibrary.FloatCallback cb = new CallbackTestLibrary.FloatCallback() {
+            @Override
             public float callback(float arg, float arg2) {
                 ARGS[0] = arg;
                 ARGS[1] = arg2;
                 return arg + arg2;
             }
         };
-        assertEquals("Wrong type mapper for callback class", lib._MAPPER,
+        assertEquals("Wrong type mapper for callback class", CallbackTestLibrary._MAPPER,
                      Native.getTypeMapper(CallbackTestLibrary.FloatCallback.class));
-        assertEquals("Wrong type mapper for callback object", lib._MAPPER,
+        assertEquals("Wrong type mapper for callback object", CallbackTestLibrary._MAPPER,
                      Native.getTypeMapper(cb.getClass()));
 
         float result = lib.callInt64Callback(cb, -1, -2);
@@ -1165,6 +1219,7 @@ public class CallbacksTest extends TestCase implements Paths {
 
         ThreadGroup testGroup = new ThreadGroup(getName() + UNICODE);
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 Thread thread = Thread.currentThread();
                 daemon[0] = thread.isDaemon();
@@ -1193,6 +1248,7 @@ public class CallbacksTest extends TestCase implements Paths {
         ThreadGroup testGroup = new ThreadGroup("Thread group for " + getName());
         CallbackThreadInitializer init = new CallbackThreadInitializer(true, false, tname, testGroup);
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 Thread thread = Thread.currentThread();
                 daemon[0] = thread.isDaemon();
@@ -1236,15 +1292,17 @@ public class CallbacksTest extends TestCase implements Paths {
     // as daemon to avoid VM having to wait for it.
     public void testCallbackThreadPersistence() throws Exception {
     	final int[] called = {0};
-        final Set threads = new HashSet();
+        final Set<Thread> threads = new HashSet<Thread>();
 
         final int COUNT = 5;
         CallbackThreadInitializer init = new CallbackThreadInitializer(true, false) {
+            @Override
             public String getName(Callback cb) {
                 return "Test thread (native) for " + CallbacksTest.this.getName() + " (call count: " + called[0] + ")";
             }
         };
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 threads.add(Thread.currentThread());
                 ++called[0];
@@ -1258,47 +1316,48 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Multiple callbacks on a given native thread should use the same Thread mapping: " + threads,
                      1, threads.size());
 
-        waitFor((Thread)threads.iterator().next());
+        waitFor(threads.iterator().next());
     }
 
     // Thread object is never GC'd on linux-amd64 and darwin-amd64 (w/openjdk7)
     public void testCleanupUndetachedThreadOnThreadExit() throws Exception {
-        final Set threads = new HashSet();
+        final Set<Reference<Thread>> threads = new HashSet<Reference<Thread>>();
         final int[] called = { 0 };
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
-                threads.add(new WeakReference(Thread.currentThread()));
+                threads.add(new WeakReference<Thread>(Thread.currentThread()));
                 if (++called[0] == 1) {
                     Thread.currentThread().setName(getName() + " (Thread to be cleaned up)");
                 }
-		Native.detach(false);
+                Native.detach(false);
             }
         };
-	// Always attach as daemon to ensure tests will exit
+        // Always attach as daemon to ensure tests will exit
         CallbackThreadInitializer asDaemon = new CallbackThreadInitializer(true) {
-	    public String getName(Callback cb) {
-		return "Test thread (native) for " + CallbacksTest.this.getName();
-	    }
-	};
+    	    @Override
+            public String getName(Callback cb) {
+    	        return "Test thread (native) for " + CallbacksTest.this.getName();
+    	    }
+        };
         callThreadedCallback(cb, asDaemon, 2, 100, called);
-	// Wait for it to start up
+        // Wait for it to start up
         long start = System.currentTimeMillis();
         while (threads.size() == 0 && called[0] == 0) {
-            Thread.sleep(10);
-	    if (System.currentTimeMillis() - start > THREAD_TIMEOUT) {
-		fail("Timed out waiting for thread to detach and terminate");
-	    }
+            Thread.sleep(10L);
+            if (System.currentTimeMillis() - start > THREAD_TIMEOUT) {
+                fail("Timed out waiting for thread to detach and terminate");
+            }
         }
         start = System.currentTimeMillis();
-        WeakReference ref = (WeakReference)threads.iterator().next();
-
+        Reference<Thread> ref = threads.iterator().next();
         while (ref.get() != null) {
             System.gc();
             Thread.sleep(100);
-	    Thread[] remaining = new Thread[Thread.activeCount()];
-	    Thread.enumerate(remaining);
+    	    Thread[] remaining = new Thread[Thread.activeCount()];
+    	    Thread.enumerate(remaining);
             if (System.currentTimeMillis() - start > THREAD_TIMEOUT) {
-                Thread t = (Thread)ref.get();
+                Thread t = ref.get();
                 Pointer terminationFlag = Native.getTerminationFlag(t);
                 assertNotNull("Native thread termination flag is missing", terminationFlag);
                 if (terminationFlag.getInt(0) == 0) {
@@ -1312,13 +1371,14 @@ public class CallbacksTest extends TestCase implements Paths {
     }
 
     // Callback indicates detach preference (instead of
-    // CallbackThreadInitializer); thread is non-daemon (default), 
+    // CallbackThreadInitializer); thread is non-daemon (default),
     // but callback explicitly detaches it on final invocation.
     public void testCallbackIndicatedThreadDetach() throws Exception {
     	final int[] called = {0};
-        final Set threads = new HashSet();
+        final Set<Thread> threads = new HashSet<Thread>();
         final int COUNT = 5;
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 threads.add(Thread.currentThread());
                 // detach on final invocation
@@ -1338,7 +1398,7 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Multiple callbacks in the same native thread should use the same Thread mapping: "
                      + threads, 1, threads.size());
 
-        waitFor((Thread)threads.iterator().next());
+        waitFor(threads.iterator().next());
     }
 
     public void testDLLCallback() throws Exception {
@@ -1348,6 +1408,7 @@ public class CallbacksTest extends TestCase implements Paths {
 
         final boolean[] called = { false };
         class TestCallback implements TestLibrary.VoidCallback, com.sun.jna.win32.DLLCallback {
+            @Override
             public void callback() {
                 called[0] = true;
             }
@@ -1363,7 +1424,7 @@ public class CallbacksTest extends TestCase implements Paths {
         Function f = kernel32.getFunction("GetModuleHandleExW");
         final int GET_MODULE_HANDLE_FROM_ADDRESS = 0x4;
         PointerByReference pref = new PointerByReference();
-        int result = f.invokeInt(new Object[] { new Integer(GET_MODULE_HANDLE_FROM_ADDRESS), fp, pref });
+        int result = f.invokeInt(new Object[] { Integer.valueOf(GET_MODULE_HANDLE_FROM_ADDRESS), fp, pref });
         assertTrue("GetModuleHandleEx(fptr) failed: " + Native.getLastError(), result != 0);
 
         f = kernel32.getFunction("GetModuleFileNameW");
@@ -1377,13 +1438,13 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Wrong module HANDLE for DLL function pointer", handle, pref.getValue());
 
         // Check slot re-use
-        Map refs = new WeakHashMap(callbackCache());
+        Map<Callback, CallbackReference> refs = new WeakHashMap<Callback, CallbackReference>(callbackCache());
         assertTrue("Callback not cached", refs.containsKey(cb));
-        CallbackReference ref = (CallbackReference)refs.get(cb);
+        CallbackReference ref = refs.get(cb);
         refs = callbackCache();
         Pointer cbstruct = ref.cbstruct;
         Pointer first_fptr = cbstruct.getPointer(0);
-        
+
         cb = null;
         System.gc();
         for (int i = 0; i < 100 && (ref.get() != null || refs.containsValue(ref)); ++i) {
@@ -1392,7 +1453,7 @@ public class CallbacksTest extends TestCase implements Paths {
         }
         assertNull("Callback not GC'd", ref.get());
         assertFalse("Callback still in map", refs.containsValue(ref));
-        
+
         ref = null;
         System.gc();
         for (int i = 0; i < 100 && (cbstruct.peer != 0 || refs.size() > 0); ++i) {
@@ -1408,7 +1469,7 @@ public class CallbacksTest extends TestCase implements Paths {
         cb = new TestCallback();
 
         lib.callVoidCallback(cb);
-        ref = (CallbackReference)refs.get(cb);
+        ref = refs.get(cb);
         cbstruct = ref.cbstruct;
 
         assertTrue("Callback not called", called[0]);
@@ -1423,6 +1484,7 @@ public class CallbacksTest extends TestCase implements Paths {
 
         final boolean[] called = { false };
         class TestCallback implements TestLibrary.VoidCallback, com.sun.jna.win32.DLLCallback {
+            @Override
             public void callback() {
                 called[0] = true;
             }
@@ -1436,6 +1498,54 @@ public class CallbacksTest extends TestCase implements Paths {
             fail("Expected out of memory error when all DLL callbacks used");
         }
         catch(OutOfMemoryError e) {
+        }
+    }
+
+    public interface TaggedCallingConventionTestLibrary extends Library, AltCallingConvention {
+        interface TestCallbackTagged extends Callback, AltCallingConvention {
+            void invoke();
+        }
+    }
+
+    public void testCallingConventionFromInterface() {
+        TaggedCallingConventionTestLibrary lib = Native.loadLibrary("testlib", TaggedCallingConventionTestLibrary.class);
+        TaggedCallingConventionTestLibrary.TestCallbackTagged cb = new TaggedCallingConventionTestLibrary.TestCallbackTagged() {
+            @Override
+            public void invoke() { }
+        };
+        try {
+            Pointer p = CallbackReference.getFunctionPointer(cb);
+            CallbackReference ref = CallbackReference.callbackMap.get(cb);
+            assertNotNull("CallbackReference not found", ref);
+            assertEquals("Tag-based calling convention not applied", Function.ALT_CONVENTION, ref.callingConvention);
+        }
+        catch (IllegalArgumentException e) {
+            // Alt convention not supported
+        }
+    }
+
+    public interface OptionCallingConventionTestLibrary extends Library {
+        interface TestCallback extends Callback {
+            void invoke();
+        }
+    }
+
+    public void testCallingConventionFromOptions() {
+        OptionCallingConventionTestLibrary lib =
+                Native.loadLibrary("testlib", OptionCallingConventionTestLibrary.class, Collections.singletonMap(Library.OPTION_CALLING_CONVENTION, Function.ALT_CONVENTION));
+        assertNotNull("Library not loaded", lib);
+        OptionCallingConventionTestLibrary.TestCallback cb = new OptionCallingConventionTestLibrary.TestCallback() {
+            @Override
+            public void invoke() { }
+        };
+        try {
+            Pointer p = CallbackReference.getFunctionPointer(cb);
+            assertNotNull("No function pointer", p);
+            CallbackReference ref = CallbackReference.callbackMap.get(cb);
+            assertNotNull("CallbackReference not found", ref);
+            assertEquals("Option-based calling convention not applied", Function.ALT_CONVENTION, ref.callingConvention);
+        } catch(IllegalArgumentException e) {
+            // Alt convention not supported
         }
     }
 
