@@ -14,9 +14,10 @@ package com.sun.jna;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
+import java.util.concurrent.atomic.AtomicReference;
 
 import junit.framework.TestCase;
 
@@ -40,8 +41,9 @@ public class StructureTest extends TestCase {
     public void testSimpleSize() throws Exception {
         class TestStructure extends Structure {
             public int field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
         }
         Structure s = new TestStructure();
@@ -51,8 +53,9 @@ public class StructureTest extends TestCase {
     public void testInitializeFromPointer() {
         class TestStructureX extends Structure {
             public int field1, field2;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field1", "field2" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field1", "field2");
             }
             public TestStructureX() {
             }
@@ -73,8 +76,9 @@ public class StructureTest extends TestCase {
     public void testInitializeWithTypeMapper() {
         class TestStructure extends Structure {
             public int field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
             public TestStructure(TypeMapper m) {
                 super(ALIGN_DEFAULT, m);
@@ -87,23 +91,26 @@ public class StructureTest extends TestCase {
 
     // must be public to populate array
     public static class TestAllocStructure extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("f0", "f1", "f2", "f3");
         public int f0;
         public int f1;
         public int f2;
         public int f3;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "f0", "f1", "f2", "f3" });
+
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
-
 
     public void testFieldsAllocated() {
         class TestStructure extends Structure {
             public TestStructure() { }
             public TestStructure(Pointer p) { super(p); }
             public int field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
             public int fieldCount() { ensureAllocated(); return fields().size(); }
         }
@@ -118,8 +125,9 @@ public class StructureTest extends TestCase {
         class TestStructure extends Structure {
             public TestStructure(Pointer p) { super(p); }
             public int field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
         }
         try {
@@ -154,8 +162,9 @@ public class StructureTest extends TestCase {
             public long l;
             public float f;
             public double d;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "b", "s", "i", "l", "f", "d" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("b", "s", "i", "l", "f", "d");
             }
         }
         Structure s = new TestStructure();
@@ -173,8 +182,9 @@ public class StructureTest extends TestCase {
             public long l;
             public float f;
             public double d;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "b", "s", "i", "l", "f", "d" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("b", "s", "i", "l", "f", "d");
             }
         }
         Structure s = new TestStructure();
@@ -184,6 +194,7 @@ public class StructureTest extends TestCase {
 
     public static abstract class FilledStructure extends Structure {
         private boolean initialized;
+        @Override
         protected void ensureAllocated() {
             super.ensureAllocated();
             if (!initialized) {
@@ -196,48 +207,60 @@ public class StructureTest extends TestCase {
     }
     // Do NOT change the order of naming w/o changing testlib.c as well
     public static class TestStructure0 extends FilledStructure {
+        public static final List<String> FIELDS = createFieldsOrder("field0", "field1");
         public byte field0 = 0x01;
         public short field1 = 0x0202;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "field0", "field1" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public static class TestStructure1 extends FilledStructure {
+        public static final List<String> FIELDS = createFieldsOrder("field0", "field1");
         public byte field0 = 0x01;
         public int field1 = 0x02020202;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "field0", "field1" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public static class TestStructure2 extends FilledStructure {
+        public static final List<String> FIELDS = createFieldsOrder("field0", "field1");
         public short field0 = 0x0101;
         public int field1 = 0x02020202;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "field0", "field1" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public static class TestStructure3 extends FilledStructure {
+        public static final List<String> FIELDS = createFieldsOrder("field0", "field1", "field2");
         public int field0 = 0x01010101;
         public short field1 = 0x0202;
         public int field2 = 0x03030303;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "field0", "field1", "field2" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public static class TestStructure4 extends FilledStructure {
+        public static final List<String> FIELDS = createFieldsOrder("field0", "field1", "field2", "field3");
         public int field0 = 0x01010101;
         public long field1 = 0x0202020202020202L;
         public int field2 = 0x03030303;
         public long field3 = 0x0404040404040404L;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "field0", "field1", "field2", "field3" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public static class TestStructure5 extends FilledStructure {
+        public static final List<String> FIELDS = createFieldsOrder("field0", "field1");
         public long field0 = 0x0101010101010101L;
         public byte field1 = 0x02;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "field0", "field1" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public interface SizeTest extends Library {
@@ -245,8 +268,8 @@ public class StructureTest extends TestCase {
     }
     private void testStructureSize(int index) {
         try {
-            SizeTest lib = (SizeTest)Native.loadLibrary("testlib", SizeTest.class);
-            Class cls = Class.forName(getClass().getName() + "$TestStructure" + index);
+            SizeTest lib = Native.loadLibrary("testlib", SizeTest.class);
+            Class<?> cls = Class.forName(getClass().getName() + "$TestStructure" + index);
             Structure s = Structure.newInstance(cls);
             assertEquals("Incorrect size for structure " + index + "=>" + s.toString(true), lib.getStructureSize(index), s.size());
         }
@@ -279,11 +302,11 @@ public class StructureTest extends TestCase {
     }
 
     private void testAlignStruct(int index) {
-        AlignmentTest lib = (AlignmentTest)Native.loadLibrary("testlib", AlignmentTest.class);
+        AlignmentTest lib = Native.loadLibrary("testlib", AlignmentTest.class);
         try {
             IntByReference offset = new IntByReference();
             LongByReference value = new LongByReference();
-            Class cls = Class.forName(getClass().getName() + "$TestStructure" + index);
+            Class<?> cls = Class.forName(getClass().getName() + "$TestStructure" + index);
             Structure s = (Structure)cls.newInstance();
             int result = lib.testStructureAlignment(s, index, offset, value);
             assertEquals("Wrong native value at field " + result
@@ -316,8 +339,9 @@ public class StructureTest extends TestCase {
 
     public void testStructureWithNoFields() {
         class TestStructure extends Structure {
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] {});
+            @Override
+            protected List<String> getFieldOrder() {
+                return Collections.emptyList();
             }
         }
         try {
@@ -325,14 +349,16 @@ public class StructureTest extends TestCase {
             fail("Structure should not be instantiable if it has no public member fields");
         }
         catch(IllegalArgumentException e) {
+            // expected - ignored
         }
     }
 
     public void testStructureWithOnlyNonPublicMemberFields() {
         class TestStructure extends Structure {
             int field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] {"field"});
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
         }
         try {
@@ -340,6 +366,7 @@ public class StructureTest extends TestCase {
             fail("Structure should not be instantiable if it has no public member fields");
         }
         catch(Error e) {
+            // expected - ignored
         }
     }
 
@@ -353,24 +380,29 @@ public class StructureTest extends TestCase {
             public ByReference() { }
             public ByReference(Pointer p) { super(p); }
         }
+
+        public static final List<String> FIELDS = createFieldsOrder("x", "y");
         public int x = 1, y = 2;
         public PublicTestStructure() { }
         public PublicTestStructure(Pointer p) { super(p); read(); }
         public static int allocations = 0;
+        @Override
         protected void allocateMemory(int size) {
             super.allocateMemory(size);
             ++allocations;
         }
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "x", "y" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public void testStructureField() {
         class TestStructure extends Structure {
             public PublicTestStructure s1, s2;
             public int after;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "s1", "s2", "after" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("s1", "s2", "after");
             }
         }
         TestStructure s = new TestStructure();
@@ -398,8 +430,9 @@ public class StructureTest extends TestCase {
         class TestStructure extends Structure {
             public PublicTestStructure.ByValue s1, s2;
             public int after;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "s1", "s2", "after" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("s1", "s2", "after");
             }
         }
         TestStructure s = new TestStructure();
@@ -423,7 +456,7 @@ public class StructureTest extends TestCase {
                      s.s2.getPointer());
     }
 
-    static class TestUnion extends Union {
+    public static class TestUnion extends Union {
         public int u_int;
         public float u_float;
         public double u_double;
@@ -433,8 +466,9 @@ public class StructureTest extends TestCase {
             public long s_long;
             public TestUnion s_union;
             public int s_int;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "s_long", "s_union", "s_int" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("s_long", "s_union", "s_int");
             }
         }
         TestStructure s = new TestStructure();
@@ -445,6 +479,7 @@ public class StructureTest extends TestCase {
     public static class NonAllocatingTestStructure extends PublicTestStructure {
         public NonAllocatingTestStructure() { }
         public NonAllocatingTestStructure(Pointer p) { super(p); read(); }
+        @Override
         protected void allocateMemory(int size) {
             throw new Error("Memory unexpectedly allocated");
         }
@@ -458,8 +493,9 @@ public class StructureTest extends TestCase {
         class TestStructure extends Structure {
             public NonAllocatingTestStructure s1;
             public TestStructure() { }
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "s1" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("s1");
             }
         }
         TestStructure ts = new TestStructure();
@@ -469,8 +505,9 @@ public class StructureTest extends TestCase {
     public void testPrimitiveArrayField() {
         class TestStructure extends Structure {
             public byte[] buffer = new byte[1024];
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "buffer" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("buffer");
             }
         }
         TestStructure s = new TestStructure();
@@ -490,8 +527,9 @@ public class StructureTest extends TestCase {
             // initialized array elements
             public PublicTestStructure[] inner2 = (PublicTestStructure[])
                 new PublicTestStructure().toArray(2);
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "inner", "inner2" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("inner", "inner2");
             }
         }
         TestStructure s = new TestStructure();
@@ -530,10 +568,13 @@ public class StructureTest extends TestCase {
     }
 
     public static class ToArrayTestStructure extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("inner");
         public PublicTestStructure[] inner =
             (PublicTestStructure[])new PublicTestStructure().toArray(2);
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "inner" });
+
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public void testToArrayWithStructureArrayField() {
@@ -550,8 +591,9 @@ public class StructureTest extends TestCase {
     public void testUninitializedNestedArrayFails() {
         class TestStructure extends Structure {
             public Pointer[] buffer;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "buffer" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("buffer");
             }
         }
         Structure s = new TestStructure();
@@ -585,8 +627,9 @@ public class StructureTest extends TestCase {
             public float[] fa = new float[3];
             public double[] da = new double[3];
             public PublicTestStructure nested;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "z", "b", "c", "s", "i", "l", "f", "d", "ba", "ca", "sa", "ia", "la", "fa", "da", "nested" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("z", "b", "c", "s", "i", "l", "f", "d", "ba", "ca", "sa", "ia", "la", "fa", "da", "nested");
             }
         }
         TestStructure s = new TestStructure();
@@ -645,8 +688,9 @@ public class StructureTest extends TestCase {
     public void testNativeLongSize() throws Exception {
         class TestStructure extends Structure {
             public NativeLong l;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "l" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("l");
             }
         }
         Structure s = new TestStructure();
@@ -657,8 +701,9 @@ public class StructureTest extends TestCase {
         class TestStructure extends Structure {
             public int i;
             public NativeLong l;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "i", "l" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("i", "l");
             }
         }
         TestStructure s = new TestStructure();
@@ -680,8 +725,9 @@ public class StructureTest extends TestCase {
         class TestStructure extends Structure {
             public int i;
             public NativeLong l;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "i", "l" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("i", "l");
             }
         }
         TestStructure s = new TestStructure();
@@ -704,39 +750,45 @@ public class StructureTest extends TestCase {
     public void testMemoryField() {
         class MemoryFieldStructure extends Structure {
             public Memory m;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "m" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("m");
             }
         }
         new MemoryFieldStructure().size();
     }
 
     public void testDisallowFunctionPointerAsField() {
-        class BadFieldStructure extends Structure {
+        class DisallowFunctionPointer extends Structure {
             public Function cb;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "cb" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("cb");
             }
         }
         try {
-            new BadFieldStructure().size();
+            new DisallowFunctionPointer().size();
             fail("Function fields should not be allowed");
         }
         catch(IllegalArgumentException e) {
+            // expected - ignored
         }
     }
 
     public static class BadFieldStructure extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("badField");
         public Object badField;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "badField" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public void testUnsupportedField() {
         class BadNestedStructure extends Structure {
             public BadFieldStructure badStruct = new BadFieldStructure();
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "badStruct" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("badStruct");
             }
         }
         try {
@@ -744,8 +796,7 @@ public class StructureTest extends TestCase {
             fail("Should throw IllegalArgumentException on bad field");
         }
         catch(IllegalArgumentException e) {
-            assertTrue("Exception should include field name: " + e,
-                       e.getMessage().indexOf("badField") != -1);
+            assertTrue("Exception should include field name: " + e.getMessage(), e.getMessage().indexOf("badField") != -1);
         }
         try {
             new BadNestedStructure();
@@ -782,8 +833,9 @@ public class StructureTest extends TestCase {
             (PublicTestStructure.ByReference[])s.toArray(2);
         class TestStructure extends Structure {
             public PublicTestStructure.ByReference ref;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "ref" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("ref");
             }
         }
         TestStructure ts = new TestStructure();
@@ -806,10 +858,12 @@ public class StructureTest extends TestCase {
         assertEquals("Array element not read: " + array[1], VALUE, array[1].y);
     }
 
-    static class CbStruct extends Structure {
+    public static class CbStruct extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("cb");
         public Callback cb;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "cb" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public void testCallbackWrite() {
@@ -821,32 +875,35 @@ public class StructureTest extends TestCase {
         s.write();
         Pointer func = s.getPointer().getPointer(0);
         assertNotNull("Callback trampoline not set", func);
-        Map refs = CallbackReference.callbackMap;
+        Map<Callback, CallbackReference> refs = CallbackReference.callbackMap;
         assertTrue("Callback not cached", refs.containsKey(s.cb));
-        CallbackReference ref = (CallbackReference)refs.get(s.cb);
+        CallbackReference ref = refs.get(s.cb);
         assertEquals("Wrong trampoline", ref.getTrampoline(), func);
     }
 
     public void testUninitializedArrayField() {
         class UninitializedArrayFieldStructure extends Structure {
             public byte[] array;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "array" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("array");
             }
         }
         try {
             Structure s = new UninitializedArrayFieldStructure();
             assertTrue("Invalid size: " + s.size(), s.size() > 0);
             fail("Uninitialized array field should cause write failure");
-        }
-        catch(IllegalStateException e) {
+        } catch(IllegalStateException e) {
+            // expected
         }
     }
 
     public static class StructureWithArrayOfStructureField extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("array");
         public Structure[] array;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "array" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public void testPlainStructureArrayField() {
@@ -855,20 +912,25 @@ public class StructureTest extends TestCase {
             fail("Structure[] should not be allowed as a field of Structure");
         }
         catch(IllegalArgumentException e) {
+            // expected - ignored
         }
         catch(Exception e) {
             fail("Wrong exception thrown when Structure[] field encountered in a Structure: " + e);
         }
     }
 
-    public void testPointerArrayField() {
-        class ArrayOfPointerStructure extends Structure {
-            final static int SIZE = 10;
-            public Pointer[] array = new Pointer[SIZE];
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "array" });
-            }
+    public static class ArrayOfPointerStructure extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("array");
+        final static int SIZE = 10;
+        public Pointer[] array = new Pointer[SIZE];
+
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
+    }
+
+    public void testPointerArrayField() {
         ArrayOfPointerStructure s = new ArrayOfPointerStructure();
         int size = s.size();
         assertEquals("Wrong size", ArrayOfPointerStructure.SIZE * Pointer.SIZE, size);
@@ -879,14 +941,18 @@ public class StructureTest extends TestCase {
         assertEquals("Wrong first element", s.getPointer(), s.array[0]);
     }
 
-    public void testVolatileStructureField() {
-        class VolatileStructure extends Structure {
-            public volatile int counter;
-            public int value;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "counter", "value" });
-            }
+    public static class VolatileStructure extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("counter", "value");
+        public volatile int counter;
+        public int value;
+
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
+    }
+
+    public void testVolatileStructureField() {
         VolatileStructure s = new VolatileStructure();
         s.counter = 1;
         s.value = 1;
@@ -904,24 +970,23 @@ public class StructureTest extends TestCase {
     }
 
     public static class StructureWithPointers extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("s1", "s2");
         public PublicTestStructure.ByReference s1;
         public PublicTestStructure.ByReference s2;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "s1", "s2" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public void testStructureByReferenceField() {
         StructureWithPointers s = new StructureWithPointers();
-        assertEquals("Wrong size for structure with structure references",
-                     Pointer.SIZE * 2, s.size());
-
+        assertEquals("Wrong size for structure with structure references", Pointer.SIZE * 2, s.size());
         assertNull("Initial refs should be null", s.s1);
     }
 
     public void testRegenerateStructureByReferenceField() {
         StructureWithPointers s = new StructureWithPointers();
-        PublicTestStructure.ByReference inner =
-            new PublicTestStructure.ByReference();
+        PublicTestStructure.ByReference inner = new PublicTestStructure.ByReference();
         PublicTestStructure.allocations = 0;
         s.s1 = inner;
         s.write();
@@ -951,8 +1016,9 @@ public class StructureTest extends TestCase {
             public TestPointer p2 = new TestPointer() {
                 { setPointer(new Memory(256)); }
             };
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "p", "p2" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("p", "p2");
             }
         }
         TestStructure s = new TestStructure();
@@ -970,8 +1036,9 @@ public class StructureTest extends TestCase {
         class TestStructure extends Structure {
             public String s;
             public WString ws;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "s", "ws" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("s", "ws");
             }
         }
         TestStructure s = new TestStructure();
@@ -993,24 +1060,28 @@ public class StructureTest extends TestCase {
 
     // Ensure string cacheing doesn't interfere with wrapped structure writes.
     public static class StructureFromPointer extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("s", "ws");
         public String s;
         public WString ws;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "s", "ws" });
-        }
         public StructureFromPointer(Pointer p) {
             super(p);
             read();
         }
         public StructureFromPointer() {
+            super();
+        }
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
 
     public void testInitializeStructureFieldWithStrings() {
         class ContainingStructure extends Structure {
             public StructureFromPointer inner;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "inner" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("inner");
             }
         }
         final String VALUE = getName() + UNICODE;
@@ -1058,8 +1129,9 @@ public class StructureTest extends TestCase {
     public void testStructureByReferenceArrayField() {
         class TestStructure extends Structure {
             public PublicTestStructure.ByReference[] array = new PublicTestStructure.ByReference[2];
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "array" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("array");
             }
         }
         TestStructure s = new TestStructure();
@@ -1088,8 +1160,9 @@ public class StructureTest extends TestCase {
     public void testAutoReadWriteStructureByReferenceArrayField() {
         class TestStructure extends Structure {
             public PublicTestStructure.ByReference field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
         }
         TestStructure s = new TestStructure();
@@ -1108,36 +1181,40 @@ public class StructureTest extends TestCase {
                      VALUE*2, array[1].x);
     }
 
-    static class NestedTypeInfoStructure extends Structure {
+    public static class NestedTypeInfoStructure extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("inner", "dummy");
         public static class Inner extends Structure {
+            public static final List<String> FIELDS = createFieldsOrder("dummy");
             public int dummy;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "dummy" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return FIELDS;
             }
         }
         public Inner inner;
         public int dummy;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "inner", "dummy" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public static class size_t extends IntegerType {
+        private static final long serialVersionUID = 1L;
         public size_t() { this(0); }
         public size_t(long value) { super(Native.POINTER_SIZE, value); }
     }
     /** Same structure as the internal representation, to be initialized from
      * the internal FFIType native data.
      */
-    class TestFFIType extends Structure {
+    public static class TestFFIType extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("size", "alignment", "type", "elements");
         // NOTE: this field is not normally initialized by libffi
         // We force initialize by calling initialize_ffi_type
         public size_t size;
         public short alignment;
         public short type;
         public Pointer elements;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "size", "alignment", "type", "elements" });
-        }
+
         public TestFFIType(Pointer p) {
             super(p);
             read();
@@ -1148,6 +1225,10 @@ public class StructureTest extends TestCase {
             int size = Native.initialize_ffi_type(p.peer);
             read();
             assertEquals("Test FFIType size improperly initialized: " + TestFFIType.this, size, TestFFIType.this.size.intValue());
+        }
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public void testNestedStructureTypeInfo() {
@@ -1161,7 +1242,7 @@ public class StructureTest extends TestCase {
         assertEquals("Wrong type information for 'inner' field",
                      inner, els.getPointer(0));
         assertEquals("Wrong type information for integer field",
-                     Structure.getTypeInfo(new Integer(0)),
+                     Structure.getTypeInfo(Integer.valueOf(0)),
                      els.getPointer(Pointer.SIZE));
         assertNull("Type element list should be null-terminated",
                    els.getPointer(Pointer.SIZE*2));
@@ -1170,8 +1251,9 @@ public class StructureTest extends TestCase {
     public void testInnerArrayTypeInfo() {
         class TestStructure extends Structure {
             public int[] inner = new int[5];
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "inner" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("inner");
             }
         }
         Structure s = new TestStructure();
@@ -1195,8 +1277,9 @@ public class StructureTest extends TestCase {
         class TestStructure extends Structure {
             public int intField;
             public PublicTestStructure inner;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "intField", "inner" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("intField", "inner");
             }
         }
         TestStructure s = new TestStructure();
@@ -1226,8 +1309,9 @@ public class StructureTest extends TestCase {
     public void testNativeMappedWrite() {
     	class TestStructure extends Structure {
             public ByteByReference ref;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "ref" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("ref");
             }
     	}
     	TestStructure s = new TestStructure();
@@ -1243,8 +1327,9 @@ public class StructureTest extends TestCase {
     public void testNativeMappedRead() {
     	class TestStructure extends Structure {
             public ByteByReference ref;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "ref" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("ref");
             }
     	}
     	TestStructure s = new TestStructure();
@@ -1262,9 +1347,11 @@ public class StructureTest extends TestCase {
     }
 
     public static class ROStructure extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("field");
         public final int field;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "field" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
         {
             // Initialize in ctor to avoid compiler replacing
@@ -1313,8 +1400,9 @@ public class StructureTest extends TestCase {
         final int SIZE = 24;
         class TestStructure extends Structure {
             public NativeLong[] longs = new NativeLong[SIZE];
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "longs" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("longs");
             }
         }
         TestStructure s = new TestStructure();
@@ -1349,8 +1437,9 @@ public class StructureTest extends TestCase {
             { setAlignType(ALIGN_NONE); }
             public NativeLong nl = INITIAL;
             public NativeLong uninitialized;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "nl", "uninitialized" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("nl", "uninitialized");
             }
         }
         TestStructure ts = new TestStructure();
@@ -1372,15 +1461,16 @@ public class StructureTest extends TestCase {
     public void testThrowErrorOnMissingFieldOrderOnDerivedStructure() {
         class TestStructure extends Structure {
             public int f1, f2;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "f1", "f2" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("f1", "f2");
             }
         }
-        class TestStructure2 extends TestStructure {
+        class NoFieldOrder extends TestStructure {
             public int f3;
         }
         try {
-            new TestStructure2();
+            new NoFieldOrder();
             fail("Expected an error when structure fails to provide field order");
         }
         catch(Error e) {
@@ -1390,8 +1480,9 @@ public class StructureTest extends TestCase {
     public void testThrowErrorOnIncorrectFieldOrderNameMismatch() {
         class TestStructure extends Structure {
             public int f1, f2;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "F1", "F2" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("F1", "F2");
             }
         }
         try {
@@ -1405,8 +1496,9 @@ public class StructureTest extends TestCase {
     public void testThrowErrorOnIncorrectFieldOrderCount() {
         class TestStructure extends Structure {
             public int f1, f2;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "f1", "f2", "f3" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("f1", "f2", "f3");
             }
         }
         try {
@@ -1414,30 +1506,48 @@ public class StructureTest extends TestCase {
             fail("Expected an error when creating a structure with wrong number of fiels in getFieldOrder()");
         }
         catch(Error e) {
+            // expected - ignored
         }
     }
 
-    class XTestStructure extends Structure {
-	public int first = 1;
-	protected List getFieldOrder() {
-	    return Arrays.asList(new String[] { "first" }); }
+    public static class XTestStructure extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("first");
+        public int first = 1;
+    	@Override
+        protected List<String> getFieldOrder() {
+    	    return FIELDS;
+	    }
     }
-    class XTestStructureSub extends XTestStructure {
-	public int second = 2;
-	protected List getFieldOrder() {
-	    List list = new ArrayList(super.getFieldOrder());
-	    list.addAll(Arrays.asList(new String[] { "second" }));
-	    return list;
-	}
+
+    public static class XTestStructureSub extends XTestStructure {
+        public static final List<String> EXTRA_FIELDS = createFieldsOrder("second");
+        private static final AtomicReference<List<String>> fieldsHolder = new AtomicReference<List<String>>(null);
+        private static List<String> resolveEffectiveFields(List<String> baseFields) {
+            List<String> fields;
+            synchronized (fieldsHolder) {
+                fields = fieldsHolder.get();
+                if (fields == null) {
+                    fields = createFieldsOrder(baseFields, EXTRA_FIELDS);
+                    fieldsHolder.set(fields);
+                }
+            }
+
+            return fields;
+        }
+    	public int second = 2;
+
+    	@Override
+        protected List<String> getFieldOrder() {
+    	    return resolveEffectiveFields(super.getFieldOrder());
+    	}
     }
+
     public void testInheritedStructureFieldOrder() {
         XTestStructureSub s = new XTestStructureSub();
         assertEquals("Wrong size", 8, s.size());
         s.write();
-        assertEquals("Wrong first field: " + s,
-                     s.first, s.getPointer().getInt(0));
-        assertEquals("Wrong second field: " + s,
-                     s.second, s.getPointer().getInt(4));
+        assertEquals("Wrong first field: " + s, s.first, s.getPointer().getInt(0));
+        assertEquals("Wrong second field: " + s, s.second, s.getPointer().getInt(4));
     }
 
     public void testVariedStructureFieldOrder() {
@@ -1447,45 +1557,37 @@ public class StructureTest extends TestCase {
             public int one = 1;
             public int three = 3;
             public int two = 2;
-            protected List getFieldOrder() {
+            @Override
+            protected List<String> getFieldOrder() {
                 return Arrays.asList(ORDER);
             }
         }
         class DerivedTestStructure extends TestStructure {
             public int five = 5;
             public int four = 4;
-            protected List getFieldOrder() {
-                List list = new ArrayList(super.getFieldOrder());
-                list.addAll(Arrays.asList(new String[] { "four", "five" }));
+            @Override
+            protected List<String> getFieldOrder() {
+                List<String> list = new ArrayList<String>(super.getFieldOrder());
+                list.addAll(Arrays.asList("four", "five"));
                 return list;
             }
         }
 
         TestStructure s = new TestStructure();
-        assertEquals("Wrong field order",
-                     Arrays.asList(ORDER), s.getFieldOrder());
+        assertEquals("Wrong field order", Arrays.asList(ORDER), s.getFieldOrder());
         s.write();
-        assertEquals("Wrong first field: " + s,
-                     s.one, s.getPointer().getInt(0));
-        assertEquals("Wrong second field: " + s,
-                     s.two, s.getPointer().getInt(4));
-        assertEquals("Wrong third field: " + s,
-                     s.three, s.getPointer().getInt(8));
+        assertEquals("Wrong first field: " + s, s.one, s.getPointer().getInt(0));
+        assertEquals("Wrong second field: " + s, s.two, s.getPointer().getInt(4));
+        assertEquals("Wrong third field: " + s, s.three, s.getPointer().getInt(8));
 
         DerivedTestStructure s2 = new DerivedTestStructure();
-        assertEquals("Wrong field order",
-                     Arrays.asList(ORDER2), s2.getFieldOrder());
+        assertEquals("Wrong field order", Arrays.asList(ORDER2), s2.getFieldOrder());
         s2.write();
-        assertEquals("Wrong first field: " + s2,
-                     s2.one, s2.getPointer().getInt(0));
-        assertEquals("Wrong second field: " + s2,
-                     s2.two, s2.getPointer().getInt(4));
-        assertEquals("Wrong third field: " + s2,
-                     s2.three, s2.getPointer().getInt(8));
-        assertEquals("Wrong derived field (1): " + s2,
-                     s2.four, s2.getPointer().getInt(12));
-        assertEquals("Wrong derived field (2): " + s2,
-                     s2.five, s2.getPointer().getInt(16));
+        assertEquals("Wrong first field: " + s2, s2.one, s2.getPointer().getInt(0));
+        assertEquals("Wrong second field: " + s2, s2.two, s2.getPointer().getInt(4));
+        assertEquals("Wrong third field: " + s2, s2.three, s2.getPointer().getInt(8));
+        assertEquals("Wrong derived field (1): " + s2, s2.four, s2.getPointer().getInt(12));
+        assertEquals("Wrong derived field (2): " + s2, s2.five, s2.getPointer().getInt(16));
     }
 
     public void testCustomTypeMapper() {
@@ -1493,12 +1595,15 @@ public class StructureTest extends TestCase {
         final DefaultTypeMapper mapper = new DefaultTypeMapper() {
             {
                 addTypeConverter(TestField.class, new TypeConverter() {
+                    @Override
                     public Object fromNative(Object value, FromNativeContext context) {
                         return new TestField();
                     }
-                    public Class nativeType() {
+                    @Override
+                    public Class<?> nativeType() {
                         return String.class;
                     }
+                    @Override
                     public Object toNative(Object value, ToNativeContext ctx) {
                         return value == null ? null : value.toString();
                     }
@@ -1510,8 +1615,9 @@ public class StructureTest extends TestCase {
             public TestStructure() {
                 super(mapper);
             }
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
         }
         Structure s = new TestStructure();
@@ -1522,8 +1628,9 @@ public class StructureTest extends TestCase {
         class TestStructure extends Structure {
             public Boolean zfield;
             public Integer field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "zfield", "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("zfield", "field");
             }
         }
         TestStructure s = new TestStructure();
@@ -1537,16 +1644,18 @@ public class StructureTest extends TestCase {
             public int first;
             public int[] second = new int[4];
             public Pointer[] third = new Pointer[4];
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "first", "second", "third" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("first", "second", "third");
             }
         }
         class TestStructure extends Structure {
             public int first;
             public int[] second = new int[4];
             public Pointer[] third = new Pointer[4];
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "first", "second", "third" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("first", "second", "third");
             }
             public TestStructure() { }
             public TestStructure(Pointer p) { super(p); }
@@ -1571,8 +1680,9 @@ public class StructureTest extends TestCase {
     public void testStructureHashCodeMatchesWhenEqual() {
         class TestStructure extends Structure {
             public int first;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "first" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("first");
             }
         }
         TestStructure s1 = new TestStructure();
@@ -1580,12 +1690,10 @@ public class StructureTest extends TestCase {
         assertFalse("hashCode should be different for two different structures", s1.hashCode() == s2.hashCode());
 
         s2.useMemory(s1.getPointer());
-        assertEquals("hashCode should match when structures have same pointer",
-                     s1.hashCode(), s2.hashCode());
+        assertEquals("hashCode should match when structures have same pointer", s1.hashCode(), s2.hashCode());
 
         s2.useMemory(s1.getPointer());
-        assertEquals("hashCode should match when structures have same pointer",
-                     s1.hashCode(), s2.hashCode());
+        assertEquals("hashCode should match when structures have same pointer", s1.hashCode(), s2.hashCode());
     }
 
     public void testRecursiveWrite() {
@@ -1594,8 +1702,9 @@ public class StructureTest extends TestCase {
             public TestStructureByRef() { }
             public int unique;
             public TestStructureByRef s;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "unique", "s" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("unique", "s");
             }
         }
         TestStructureByRef s = new TestStructureByRef();
@@ -1605,30 +1714,26 @@ public class StructureTest extends TestCase {
         s.s.unique = 2;
 
         s.write();
-        assertEquals("Structure field contents not written",
-                     1, s.getPointer().getInt(0));
-        assertEquals("ByReference structure field contents not written",
-                     2, s.s.getPointer().getInt(0));
+        assertEquals("Structure field contents not written", 1, s.getPointer().getInt(0));
+        assertEquals("ByReference structure field contents not written", 2, s.s.getPointer().getInt(0));
 
         s.s.unique = 0;
         Structure value = s.s;
         s.read();
         assertEquals("ByReference structure field not preserved", value, s.s);
-
-        assertEquals("ByReference structure field contents not read",
-                     2, s.s.unique);
-
-        assertTrue("Temporary storage should be cleared",
-                   s.busy().isEmpty());
+        assertEquals("ByReference structure field contents not read", 2, s.s.unique);
+        assertTrue("Temporary storage should be cleared", Structure.busy().isEmpty());
     }
 
     public static class CyclicTestStructure extends Structure {
         public static class ByReference extends CyclicTestStructure implements Structure.ByReference {}
+        public static final List<String> FIELDS = createFieldsOrder("next");
         public CyclicTestStructure(Pointer p) { super(p); }
         public CyclicTestStructure() { }
         public CyclicTestStructure.ByReference next;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "next" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public void testCyclicRead() {
@@ -1644,21 +1749,21 @@ public class StructureTest extends TestCase {
         value = s.next;
         s.next.next = null;
         s.read();
-        assertSame("ByReference structure field should reuse existing value",
-                   value, s.next);
-        assertSame("Nested ByReference structure field should reuse existing value",
-                   value, s.next.next);
+        assertSame("ByReference structure field should reuse existing value", value, s.next);
+        assertSame("Nested ByReference structure field should reuse existing value", value, s.next.next);
     }
 
     public void testAvoidMemoryAllocationInPointerCTOR() {
         class TestStructure extends Structure {
             public int field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
             public TestStructure(Pointer p) {
                 super(p);
             }
+            @Override
             protected Memory autoAllocate(int size) {
                 fail("Memory should not be auto-allocated");
                 return null;
@@ -1672,8 +1777,9 @@ public class StructureTest extends TestCase {
         class TestStructure extends Structure {
             public int intField;
             public byte[] arrayField = new byte[256];
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "intField", "arrayField" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("intField", "arrayField");
             }
             public TestStructure(Pointer p) {
                 super(p);
@@ -1703,6 +1809,7 @@ public class StructureTest extends TestCase {
 
 
     public static class TestByReferenceArrayField extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("value1", "array", "value2");
         public TestByReferenceArrayField() { }
         public TestByReferenceArrayField(Pointer m) {
             super(m);
@@ -1711,8 +1818,9 @@ public class StructureTest extends TestCase {
         public int value1;
         public ByReference[] array = new ByReference[13];
         public int value2;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "value1", "array", "value2" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
 
         public static class ByReference extends TestByReferenceArrayField implements Structure.ByReference { }
@@ -1738,8 +1846,9 @@ public class StructureTest extends TestCase {
     public void testEquals() {
         class TestStructure extends Structure {
             public int field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
             public TestStructure() { }
             public TestStructure(Pointer p) { super(p); read(); }
@@ -1755,8 +1864,9 @@ public class StructureTest extends TestCase {
     public void testStructureLayoutCacheing() {
         class TestStructure extends Structure {
             public int field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
         }
         Structure ts = new TestStructure(); ts.ensureAllocated();
@@ -1768,8 +1878,9 @@ public class StructureTest extends TestCase {
     public void testStructureLayoutVariableNoCache() {
         class TestStructure extends Structure {
             public byte[] variable;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "variable" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("variable");
             }
             public TestStructure(int size) {
                 this.variable = new byte[size];
@@ -1787,12 +1898,15 @@ public class StructureTest extends TestCase {
         class TestTypeMapper extends DefaultTypeMapper {
             {
                 TypeConverter tc = new TypeConverter() {
-                    public Class nativeType() { return int.class; }
+                    @Override
+                    public Class<?> nativeType() { return int.class; }
+                    @Override
                     public Object fromNative(Object nativeValue, FromNativeContext c) {
-                        return new Boolean(nativeValue.equals(new Integer(0)));
+                        return Boolean.valueOf(nativeValue.equals(Integer.valueOf(0)));
                     }
+                    @Override
                     public Object toNative(Object value, ToNativeContext c) {
-                        return new Integer(Boolean.TRUE.equals(value) ? -1 : 0);
+                        return Integer.valueOf(Boolean.TRUE.equals(value) ? -1 : 0);
                     }
                 };
                 addTypeConverter(boolean.class, tc);
@@ -1802,8 +1916,9 @@ public class StructureTest extends TestCase {
         final TestTypeMapper m = new TestTypeMapper();
         class TestStructure extends Structure {
             public boolean field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
             public TestStructure() {
                 super(m);
@@ -1823,8 +1938,9 @@ public class StructureTest extends TestCase {
         class TestStructure extends Structure {
             public byte first;
             public int second;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "first", "second" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("first", "second");
             }
             public TestStructure() {
                 setAlignType(ALIGN_NONE);
@@ -1848,29 +1964,35 @@ public class StructureTest extends TestCase {
 
     public void testFFITypeCalculationWithTypeMappedFields() {
         final TypeMapper mapper = new TypeMapper() {
-            public FromNativeConverter getFromNativeConverter(Class cls) {
+            @Override
+            public FromNativeConverter getFromNativeConverter(Class<?> cls) {
                 if (Boolean.class.equals(cls)
                     || boolean.class.equals(cls)) {
                     return new FromNativeConverter() {
-                        public Class nativeType() {
+                        @Override
+                        public Class<?> nativeType() {
                             return byte.class;
                         }
+                        @Override
                         public Object fromNative(Object nativeValue, FromNativeContext context) {
-                            return nativeValue.equals(new Byte((byte)0))
+                            return nativeValue.equals(Byte.valueOf((byte)0))
                                 ? Boolean.FALSE : Boolean.TRUE;
                         }
                     };
                 }
                 return null;
             }
-            public ToNativeConverter getToNativeConverter(Class javaType) {
+            @Override
+            public ToNativeConverter getToNativeConverter(Class<?> javaType) {
                 if (Boolean.class.equals(javaType)
                     || boolean.class.equals(javaType)) {
                     return new ToNativeConverter() {
+                        @Override
                         public Object toNative(Object value, ToNativeContext context) {
-                            return new Byte(Boolean.TRUE.equals(value) ? (byte)1 : (byte)0);
+                            return Byte.valueOf(Boolean.TRUE.equals(value) ? (byte)1 : (byte)0);
                         }
-                        public Class nativeType() {
+                        @Override
+                        public Class<?> nativeType() {
                             return byte.class;
                         }
                     };
@@ -1886,8 +2008,9 @@ public class StructureTest extends TestCase {
             public TestStructure() {
                 super(mapper);
             }
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "b", "s", "p0", "p1", "p2", "p3", "p4", "p5", "p6", "p7" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("b", "s", "p0", "p1", "p2", "p3", "p4", "p5", "p6", "p7");
             }
         }
         Structure s = new TestStructure();
@@ -1901,8 +2024,9 @@ public class StructureTest extends TestCase {
     public void testDefaultStringEncoding() {
         class TestStructure extends Structure {
             public String field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
         }
         TestStructure s = new TestStructure();
@@ -1914,8 +2038,9 @@ public class StructureTest extends TestCase {
     public void testStringFieldEncoding() throws Exception {
         class TestStructure extends Structure {
             public String field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
         }
         TestStructure s = new TestStructure();
@@ -1939,18 +2064,19 @@ public class StructureTest extends TestCase {
         s.read();
         assertEquals("String not decoded properly on read", VALUE, s.field);
     }
-    
+
     public void testThreadLocalSetReleasesReferences() {
     	class TestStructure extends Structure {
             public String field;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "field" });
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("field");
             }
         }
-    	
+
     	TestStructure ts1 = new TestStructure();
     	TestStructure ts2 = new TestStructure();
-    	
+
     	StructureSet structureSet = (StructureSet) Structure.busy();
     	structureSet.add(ts1);
     	structureSet.add(ts2);
