@@ -8,7 +8,7 @@
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.  
+ * Lesser General Public License for more details.
  */
 package com.sun.jna;
 
@@ -24,62 +24,77 @@ public class VarArgsTest extends TestCase {
     public static interface TestLibrary extends Library {
         public static class TestStructure extends Structure {
             public int magic = 0;
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "magic" }); 
+            @Override
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("magic");
             }
         }
-        public int addInt32VarArgs(String fmt, Number... args);
+        public int addVarArgs(String fmt, Number... args);
         public String returnStringVarArgs(String fmt, Object... args);
         public void modifyStructureVarArgs(String fmt, Object arg1, Object... args);
     }
     TestLibrary lib;
+    @Override
     protected void setUp() {
-        lib = (TestLibrary)Native.loadLibrary("testlib", TestLibrary.class);
+        lib = Native.loadLibrary("testlib", TestLibrary.class);
     }
+    @Override
     protected void tearDown() {
         lib = null;
-    }   
+    }
     public void testIntVarArgs() {
         int arg1 = 1;
         int arg2 = 2;
-        assertEquals("VarArgs not added correctly", arg1 + arg2,
-                     lib.addInt32VarArgs("dd", new Integer(arg1), new Integer(arg2)));
+        assertEquals("32-bit integer varargs not added correctly", arg1 + arg2,
+                     lib.addVarArgs("dd", Integer.valueOf(arg1), Integer.valueOf(arg2)));
     }
     public void testShortVarArgs() {
         short arg1 = 1;
         short arg2 = 2;
-        assertEquals("VarArgs not added correctly", arg1 + arg2,
-                     lib.addInt32VarArgs("dd", new Short(arg1), new Short(arg2)));
+        assertEquals("16-bit integer varargs not added correctly", arg1 + arg2,
+                     lib.addVarArgs("dd", Short.valueOf(arg1), Short.valueOf(arg2)));
     }
     public void testLongVarArgs() {
         short arg1 = 1;
         short arg2 = 2;
-        assertEquals("VarArgs not added correctly", arg1 + arg2,
-                     lib.addInt32VarArgs("ll", new Long(arg1), new Long(arg2)));
+        assertEquals("64-bit integer varargs not added correctly", arg1 + arg2,
+                     lib.addVarArgs("ll", Long.valueOf(arg1), Long.valueOf(arg2)));
+    }
+    public void testFloatVarArgs() {
+        float arg1 = 1;
+        float arg2 = 2;
+        assertEquals("float varargs not added correctly", (int)arg1 + (int)arg2,
+                     lib.addVarArgs("ff", Float.valueOf(arg1), Float.valueOf(arg2)));
+    }
+    public void testDoubleVarArgs() {
+        double arg1 = 1;
+        double arg2 = 2;
+        assertEquals("double varargs not added correctly", (int)arg1 + (int)arg2,
+                     lib.addVarArgs("gg", Double.valueOf(arg1), Double.valueOf(arg2)));
     }
     public void testStringVarArgs() {
         Object[] args = new Object[] { "Test" };
         assertEquals("Did not return correct string", args[0],
                      lib.returnStringVarArgs("", args));
     }
-    
+
     public void testAppendNullToVarargs() {
-        Number[] args = new Number[] { new Integer(1) };
+        Number[] args = new Number[] { Integer.valueOf(1) };
         assertEquals("No trailing NULL was appended to varargs list",
-                     1, lib.addInt32VarArgs("dd", args));
+                     1, lib.addVarArgs("dd", args));
     }
-    
+
     public void testModifyStructureInVarargs() {
         TestStructure arg1 = new TestStructure();
         TestStructure[] varargs = new TestStructure[] { new TestStructure() };
         lib.modifyStructureVarArgs("ss", arg1, varargs[0]);
         assertEquals("Structure memory not read in fixed arg w/varargs",
-                     MAGIC32, arg1.magic); 
+                     MAGIC32, arg1.magic);
         assertEquals("Structure memory not read in varargs",
-                     MAGIC32, varargs[0].magic); 
-                     
+                     MAGIC32, varargs[0].magic);
+
     }
-    
+
     public static void main(String[] args) {
         junit.textui.TestRunner.run(VarArgsTest.class);
     }
